--- a/basic.html
+++ b/basic.html
@@ -649,12 +649,12 @@ declaration (<a href='basic.scope.pdecl'>[basic.scope.pdecl]</a>) and ends at th
 declaration of subsequent <i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i> and their default
 arguments but cannot be used in preceding <i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i> or their
 default arguments. For example,</p><pre class='codeblock'>
-template&lt;class T, T* p, class U = T&gt; class X { <span class='comment'>/* ... */</span> };
+template&lt;class T, T* p, class U = T&gt; class X { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; void f(T* p = new T);
 </pre><p >This also implies that a <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i> can be used in the
 specification of base classes. For example,</p><pre class='codeblock'>
-template&lt;class T&gt; class X : public Array&lt;T&gt; { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; class Y : public T { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class X : public Array&lt;T&gt; { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; class Y : public T { <span class='texttt'>/* ... */</span> };
 </pre><p >The use of a template parameter as a base class implies that a class used as a template
 argument must be defined and not just declared when the class template is instantiated.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='scope.temp-4'><div class='marginalizedparent'><a class='marginalized' href='#scope.temp-4'>4</a></div><p >The declarative region of the name of a template parameter is nested within the
@@ -1385,7 +1385,7 @@ struct Data {
   struct Node* Node;            <span class='comment'>// OK: Refers to <span class='texttt'>Node</span> at global scope
 </span>  friend struct ::Glob;         <span class='comment'>// error: <span class='texttt'>Glob</span> is not declared, cannot introduce a qualified type (<a href='dcl.type.elab'>[dcl.type.elab]</a>)
 </span>  friend struct Glob;           <span class='comment'>// OK: Refers to (as yet) undeclared <span class='texttt'>Glob</span> at global scope.
-</span>  <span class='comment'>/* ... */</span>
+</span>  <span class='texttt'>/* ... */</span>
 };
 
 struct Base {
@@ -1394,7 +1394,7 @@ struct Base {
 </span>  struct Base::Data* thisData;  <span class='comment'>// OK: Refers to nested <span class='texttt'>Data</span>
 </span>  friend class ::Data;          <span class='comment'>// OK: global <span class='texttt'>Data</span> is a friend
 </span>  friend class Data;            <span class='comment'>// OK: nested <span class='texttt'>Data</span> is a friend
-</span>  struct Data <span class='texttt'>{ /* ... */ };</span>   <span class='comment'>// Defines nested <span class='texttt'>Data</span>
+</span>  struct Data { <span class='texttt'>/* ... */</span> };    <span class='comment'>// Defines nested <span class='texttt'>Data</span>
 </span>};
 
 struct Data;                    <span class='comment'>// OK: Redeclares <span class='texttt'>Data</span> at global scope
@@ -1552,10 +1552,10 @@ namespace X {
     q();                        <span class='comment'>// error: <span class='texttt'>q</span> not yet declared
 </span>  }
 
-  void q() <span class='texttt'>{ /* ... */ }</span>       <span class='comment'>// definition of <span class='texttt'>X::q</span>        
+  void q() { <span class='texttt'>/* ... */</span> }        <span class='comment'>// definition of <span class='texttt'>X::q</span>
 </span>}
 
-void q() <span class='texttt'>{ /* ... */ }</span>         <span class='comment'>// some other, unrelated <span class='texttt'>q</span>
+void q() { <span class='texttt'>/* ... */</span> }          <span class='comment'>// some other, unrelated <span class='texttt'>q</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='link-8'><div class='marginalizedparent'><a class='marginalized' href='#link-8'>8</a></div><p ><span class='indexparent'><a class='index' id='linkage,no'></a></span>Names not covered by these rules have no linkage. Moreover, except as
 noted, a name declared at block scope (<a href='basic.scope.block'>[basic.scope.block]</a>) has no
 linkage. A type is said to have linkage if and only if:
