--- a/basic.link.html
+++ b/basic.link.html
@@ -76,10 +76,10 @@ namespace X {
     q();                        <span class='comment'>// error: <span class='texttt'>q</span> not yet declared
 </span>  }
 
-  void q() <span class='texttt'>{ /* ... */ }</span>       <span class='comment'>// definition of <span class='texttt'>X::q</span>        
+  void q() { <span class='texttt'>/* ... */</span> }        <span class='comment'>// definition of <span class='texttt'>X::q</span>
 </span>}
 
-void q() <span class='texttt'>{ /* ... */ }</span>         <span class='comment'>// some other, unrelated <span class='texttt'>q</span>
+void q() { <span class='texttt'>/* ... */</span> }          <span class='comment'>// some other, unrelated <span class='texttt'>q</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p ><span class='indexparent'><a class='index' id='linkage,no'></a></span>Names not covered by these rules have no linkage. Moreover, except as
 noted, a name declared at block scope (<a href='basic.scope.block'>[basic.scope.block]</a>) has no
 linkage. A type is said to have linkage if and only if:
