--- a/basic.lookup.html
+++ b/basic.lookup.html
@@ -700,7 +700,7 @@ struct Data {
   struct Node* Node;            <span class='comment'>// OK: Refers to <span class='texttt'>Node</span> at global scope
 </span>  friend struct ::Glob;         <span class='comment'>// error: <span class='texttt'>Glob</span> is not declared, cannot introduce a qualified type (<a href='dcl.type.elab'>[dcl.type.elab]</a>)
 </span>  friend struct Glob;           <span class='comment'>// OK: Refers to (as yet) undeclared <span class='texttt'>Glob</span> at global scope.
-</span>  <span class='comment'>/* ... */</span>
+</span>  <span class='texttt'>/* ... */</span>
 };
 
 struct Base {
@@ -709,7 +709,7 @@ struct Base {
 </span>  struct Base::Data* thisData;  <span class='comment'>// OK: Refers to nested <span class='texttt'>Data</span>
 </span>  friend class ::Data;          <span class='comment'>// OK: global <span class='texttt'>Data</span> is a friend
 </span>  friend class Data;            <span class='comment'>// OK: nested <span class='texttt'>Data</span> is a friend
-</span>  struct Data <span class='texttt'>{ /* ... */ };</span>   <span class='comment'>// Defines nested <span class='texttt'>Data</span>
+</span>  struct Data { <span class='texttt'>/* ... */</span> };    <span class='comment'>// Defines nested <span class='texttt'>Data</span>
 </span>};
 
 struct Data;                    <span class='comment'>// OK: Redeclares <span class='texttt'>Data</span> at global scope
