--- a/basic.scope.temp.html
+++ b/basic.scope.temp.html
@@ -26,12 +26,12 @@ declaration (<a href='basic.scope.pdecl'>[basic.scope.pdecl]</a>) and ends at th
 declaration of subsequent <i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i> and their default
 arguments but cannot be used in preceding <i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i> or their
 default arguments. For example,</p><pre class='codeblock'>
-template&lt;class T, T* p, class U = T&gt; class X { <span class='comment'>/* ... */</span> };
+template&lt;class T, T* p, class U = T&gt; class X { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; void f(T* p = new T);
 </pre><p >This also implies that a <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i> can be used in the
 specification of base classes. For example,</p><pre class='codeblock'>
-template&lt;class T&gt; class X : public Array&lt;T&gt; { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; class Y : public T { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class X : public Array&lt;T&gt; { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; class Y : public T { <span class='texttt'>/* ... */</span> };
 </pre><p >The use of a template parameter as a base class implies that a class used as a template
 argument must be defined and not just declared when the class template is instantiated.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >The declarative region of the name of a template parameter is nested within the
