--- a/class.abstract.html
+++ b/class.abstract.html
@@ -19,7 +19,7 @@ with (<a href='class.dtor'>[class.dtor]</a>), the <i ><a href='expr.prim.id.qual
 syntax (<a href='expr.prim'>[expr.prim]</a>).
 [&nbsp;<i>Example:</i>
 <span class='indexparent'><a class='index' id='example,pure_virtual_function'></a></span></p><pre class='codeblock'>
-class point { <span class='comment'>/* ... */</span> };
+class point { <span class='texttt'>/* ... */</span> };
 class shape {                   <span class='comment'>// abstract class
 </span>  point center;
 public:
