--- a/class.access.base.html
+++ b/class.access.base.html
@@ -39,15 +39,15 @@ is assumed when the class is
 defined with the <i ><a href='class#nt:class-key'>class-key</a></i>
 <span class='texttt'>class</span>.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-class B { <span class='comment'>/* ... */</span> };
-class D1 : private B { <span class='comment'>/* ... */</span> };
-class D2 : public B { <span class='comment'>/* ... */</span> };
-class D3 : B { <span class='comment'>/* ... */</span> };     <span class='comment'>// <span class='texttt'>B</span> private by default
-</span>struct D4 : public B { <span class='comment'>/* ... */</span> };
-struct D5 : private B { <span class='comment'>/* ... */</span> };
-struct D6 : B { <span class='comment'>/* ... */</span> };    <span class='comment'>// <span class='texttt'>B</span> public by default
-</span>class D7 : protected B { <span class='comment'>/* ... */</span> };
-struct D8 : protected B { <span class='comment'>/* ... */</span> };
+class B { <span class='texttt'>/* ... */</span> };
+class D1 : private B { <span class='texttt'>/* ... */</span> };
+class D2 : public B { <span class='texttt'>/* ... */</span> };
+class D3 : B { <span class='texttt'>/* ... */</span> };             <span class='comment'>// <span class='texttt'>B</span> private by default
+</span>struct D4 : public B { <span class='texttt'>/* ... */</span> };
+struct D5 : private B { <span class='texttt'>/* ... */</span> };
+struct D6 : B { <span class='texttt'>/* ... */</span> };            <span class='comment'>// <span class='texttt'>B</span> public by default
+</span>class D7 : protected B { <span class='texttt'>/* ... */</span> };
+struct D8 : protected B { <span class='texttt'>/* ... */</span> };
 </pre><p >Here
 <span class='texttt'>B</span>
 is a public base of
@@ -149,9 +149,8 @@ class S: private B {
 
 class N: private S {
   void f() {
-    B* p = this;    <span class='comment'>// OK because class <span class='texttt'>S</span> satisfies the fourth condition
-</span>                    <span class='comment'>// above: <span class='texttt'>B</span> is a base class of <span class='texttt'>N</span> accessible in <span class='texttt'>f()</span> because
-</span>                    <span class='comment'>// <span class='texttt'>B</span> is an accessible base class of <span class='texttt'>S</span> and <span class='texttt'>S</span> is an accessible
+    B* p = this;    <span class='comment'>// OK because class <span class='texttt'>S</span> satisfies the fourth condition above: <span class='texttt'>B</span> is a base class of <span class='texttt'>N</span>
+</span>                    <span class='comment'>// accessible in <span class='texttt'>f()</span> because <span class='texttt'>B</span> is an accessible base class of <span class='texttt'>S</span> and <span class='texttt'>S</span> is an accessible
 </span>                    <span class='comment'>// base class of <span class='texttt'>N</span>.
 </span>  }
 };
@@ -244,8 +243,7 @@ private:
 };
 class B : public A { };
 void f(B* p) {
-  p-&gt;i = 1;         <span class='comment'>// OK: <span class='texttt'>B*</span> can be implicitly converted to <span class='texttt'>A*</span>,
-</span>                    <span class='comment'>// and <span class='texttt'>f</span> has access to <span class='texttt'>i</span> in <span class='texttt'>A</span>
+  p-&gt;i = 1;         <span class='comment'>// OK: <span class='texttt'>B*</span> can be implicitly converted to <span class='texttt'>A*</span>, and <span class='texttt'>f</span> has access to <span class='texttt'>i</span> in <span class='texttt'>A</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></li></ul></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If a class member access operator, including an implicit
