--- a/class.access.virt.html
+++ b/class.access.virt.html
@@ -16,8 +16,7 @@ void f() {
   B* pb = &amp;d;
   D* pd = &amp;d;
 
-  pb-&gt;f();                      <span class='comment'>// OK: <span class='texttt'>B::f()</span> is public,
-</span>                                <span class='comment'>// <span class='texttt'>D::f()</span> is invoked
+  pb-&gt;f();                      <span class='comment'>// OK: <span class='texttt'>B::f()</span> is public, <span class='texttt'>D::f()</span> is invoked
 </span>  pd-&gt;f();                      <span class='comment'>// error: <span class='texttt'>D::f()</span> is private
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Access is checked at the call point using the type of the expression used
