--- a/class.base.init.html
+++ b/class.base.init.html
@@ -38,7 +38,7 @@ struct A { A(); };
 typedef A global_A;
 struct B { };
 struct C: public A, public B { C(); };
-C::C(): global_A() { }        <span class='comment'>// mem-initializer for base <span class='texttt'>A</span>
+C::C(): global_A() { }          <span class='comment'>// mem-initializer for base <span class='texttt'>A</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >If a
 <i ><a href='class.base.init#nt:mem-initializer-id'>mem-initializer-id</a></i>
 is ambiguous because it designates both a direct non-virtual base class and
@@ -85,17 +85,18 @@ in a
 <i ><a href='class.base.init#nt:mem-initializer'>mem-initializer</a></i>
 is used to initialize the
 designated subobject (or, in the case of a delegating constructor, the complete class object)
-according to the initialization rules of <a href='dcl.init'>[dcl.init]</a> for direct-initialization.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
-struct B1 { B1(int); <span class='comment'>/* ... */</span> };
-struct B2 { B2(int); <span class='comment'>/* ... */</span> };
+according to the initialization rules of <a href='dcl.init'>[dcl.init]</a> for direct-initialization.
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
+struct B1 { B1(int); <span class='texttt'>/* ... */</span> };
+struct B2 { B2(int); <span class='texttt'>/* ... */</span> };
 struct D : B1, B2 {
   D(int);
   B1 b;
   const int c;
 };
 
-D::D(int a) : B2(a+1), B1(a+2), c(a+3), b(a+4)
-  { <span class='comment'>/* ... */</span> }
+D::D(int a) : B2(a+1), B1(a+2), c(a+3), b(a+4) { <span class='texttt'>/* ... */</span> }
 D d(10);
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
@@ -114,7 +115,7 @@ is ill-formed.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct A {
-  A() : v(42) { }  <span class='comment'>// error
+  A() : v(42) { }   <span class='comment'>// error
 </span>  const int&amp; v;
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><p >In a non-delegating constructor, if
@@ -161,10 +162,10 @@ struct B {
 
 struct C {
   C() { }               <span class='comment'>// initializes members as follows:
-</span>  A a;                    <span class='comment'>// OK: calls <span class='texttt'>A::A()</span>
-</span>  const B b;              <span class='comment'>// error: <span class='texttt'>B</span> has no default constructor
-</span>  int i;                  <span class='comment'>// OK: <span class='texttt'>i</span> has indeterminate value
-</span>  int j = 5;              <span class='comment'>// OK: <span class='texttt'>j</span> has the value <span class='texttt'>5</span>
+</span>  A a;                  <span class='comment'>// OK: calls <span class='texttt'>A::A()</span>
+</span>  const B b;            <span class='comment'>// error: <span class='texttt'>B</span> has no default constructor
+</span>  int i;                <span class='comment'>// OK: <span class='texttt'>i</span> has indeterminate value
+</span>  int j = 5;            <span class='comment'>// OK: <span class='texttt'>j</span> has the value <span class='texttt'>5</span>
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><p >If a given non-static data member has both a default member initializer
 and a <i ><a href='class.base.init#nt:mem-initializer'>mem-initializer</a></i>, the initialization specified by the
@@ -186,17 +187,18 @@ default member initializer is ill-formed.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct A {
-  A() = default;          <span class='comment'>// OK
-</span>  A(int v) : v(v) { }     <span class='comment'>// OK
-</span>  const int&amp; v = 42;      <span class='comment'>// OK
+  A() = default;        <span class='comment'>// OK
+</span>  A(int v) : v(v) { }   <span class='comment'>// OK
+</span>  const int&amp; v = 42;    <span class='comment'>// OK
 </span>};
-A a1;                     <span class='comment'>// error: ill-formed binding of temporary to reference
-</span>A a2(1);                  <span class='comment'>// OK, unfortunately
+A a1;                   <span class='comment'>// error: ill-formed binding of temporary to reference
+</span>A a2(1);                <span class='comment'>// OK, unfortunately
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><p >In a non-delegating constructor, the destructor for each potentially constructed
 subobject of class type is potentially invoked (<a href='class.dtor'>[class.dtor]</a>).
 [&nbsp;<i>Note:</i> This provision ensures that destructors can be called for fully-constructed
 subobjects in case an exception is thrown (<a href='except.ctor'>[except.ctor]</a>). <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><p >In a non-delegating constructor, initialization
-proceeds in the following order:</p><ul class='itemize'><li id='13.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#13.1'>(13.1)</a></div><p ><span class='indexparent'><a class='index' id='initialization,order_of_virtual_base_class'></a></span>First, and only for the constructor of the most derived class (<a href='intro.object'>[intro.object]</a>),
+proceeds in the following order:
+</p><ul class='itemize'><li id='13.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#13.1'>(13.1)</a></div><p ><span class='indexparent'><a class='index' id='initialization,order_of_virtual_base_class'></a></span>First, and only for the constructor of the most derived class (<a href='intro.object'>[intro.object]</a>),
 virtual base classes are initialized in the order they appear on a
 depth-first left-to-right traversal of the directed acyclic graph of
 base classes,
@@ -239,9 +241,9 @@ struct C : A, B, virtual V {
   C(int);
 };
 
-A::A(int i) : V(i) { <span class='comment'>/* ... */</span> }
-B::B(int i) { <span class='comment'>/* ... */</span> }
-C::C(int i) { <span class='comment'>/* ... */</span> }
+A::A(int i) : V(i) { <span class='texttt'>/* ... */</span> }
+B::B(int i) { <span class='texttt'>/* ... */</span> }
+C::C(int i) { <span class='texttt'>/* ... */</span> }
 
 V v(1);             <span class='comment'>// use <span class='texttt'>V(int)</span>
 </span>A a(2);             <span class='comment'>// use <span class='texttt'>V(int)</span>
@@ -308,7 +310,8 @@ However, if these operations are performed in a
 before all the
 <i ><a href='class.base.init#nt:mem-initializer'>mem-initializers</a></i>
 for base classes have completed, the program has undefined behavior.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class A {
 public:
   A(int);
@@ -318,8 +321,7 @@ class B : public A {
   int j;
 public:
   int f();
-  B() : A(f()),     <span class='comment'>// undefined: calls member function
-</span>                    <span class='comment'>// but base <span class='texttt'>A</span> not yet initialized
+  B() : A(f()),     <span class='comment'>// undefined: calls member function but base <span class='texttt'>A</span> not yet initialized
 </span>  j(f()) { }        <span class='comment'>// well-defined: bases are all initialized
 </span>};
 
@@ -331,8 +333,7 @@ public:
 class D : public B, C {
   int i;
 public:
-  D() : C(f()),     <span class='comment'>// undefined: calls member function
-</span>                    <span class='comment'>// but base <span class='texttt'>C</span> not yet initialized
+  D() : C(f()),     <span class='comment'>// undefined: calls member function but base <span class='texttt'>C</span> not yet initialized
 </span>  i(f()) { }        <span class='comment'>// well-defined: bases are all initialized
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='17'><div class='marginalizedparent'><a class='marginalized' href='#17'>17</a></div><p >[&nbsp;<i>Note:</i>
