--- a/class.bit.html
+++ b/class.bit.html
@@ -56,6 +56,6 @@ A a;
 void f() {
   a.b = TRUE;
   if (a.b == TRUE)              <span class='comment'>// yields <span class='texttt'>true</span>
-</span>    { <span class='comment'>/* ... */</span> }
+</span>    { <span class='texttt'>/* ... */</span> }
 }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div></body></html>
