--- a/class.conv.ctor.html
+++ b/class.conv.ctor.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang='en'><head><title>[class.conv.ctor]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>12</a> Special member functions <a class='abbr_ref' href='./#special'>[special]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>12.3</a> Conversions <a class='abbr_ref' href='class.conv#ctor'>[class.conv]</a></h2><div id='class.conv.ctor'><h3 ><a class='secnum' style='min-width:103pt'>12.3.1</a> Conversion by constructor <a class='abbr_ref'>[class.conv.ctor]</a></h3><p ><span class='indexparent'><a class='index' id='conversion,user-defined'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >A constructor declared without the
+<!DOCTYPE html><html lang='en'><head><title>[class.conv.ctor]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>12</a> Special member functions <a class='abbr_ref' href='./#special'>[special]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>12.3</a> Conversions <a class='abbr_ref' href='class.conv#ctor'>[class.conv]</a></h2><div id='class.conv.ctor'><h3 ><a class='secnum' style='min-width:103pt'>12.3.1</a> Conversion by constructor <a class='abbr_ref'>[class.conv.ctor]</a></h3><p ><span class='indexparent'><a class='index' id='conversion,user-defined'></a></span>
+</p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >A constructor declared without the
 <i ><a href='dcl.fct.spec#nt:function-specifier'>function-specifier</a></i>
 <span class='texttt'>explicit</span>
 specifies a conversion from
@@ -22,12 +23,14 @@ void f(X arg) {
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >[&nbsp;<i>Note:</i>
 An explicit constructor constructs objects just like non-explicit
-constructors, but does so only where the direct-initialization syntax (<a href='dcl.init'>[dcl.init]</a>) or where casts (<a href='expr.static.cast'>[expr.static.cast]</a>, <a href='expr.cast'>[expr.cast]</a>) are explicitly
+constructors, but does so only where the direct-initialization syntax (<a href='dcl.init'>[dcl.init]</a>)
+or where casts (<a href='expr.static.cast'>[expr.static.cast]</a>, <a href='expr.cast'>[expr.cast]</a>) are explicitly
 used; see also <a href='over.match.copy'>[over.match.copy]</a>.
 A default constructor may be an explicit constructor; such a constructor
 will be used to perform default-initialization
 or value-initialization (<a href='dcl.init'>[dcl.init]</a>).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct Z {
   explicit Z();
   explicit Z(int);
