--- a/class.copy.html
+++ b/class.copy.html
@@ -460,7 +460,8 @@ and in constant initialization (<a href='basic.start.static'>[basic.start.static
 Copy elision might not be performed
 if the same expression
 is evaluated in another context.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='elision-2'><div class='marginalizedparent'><a class='marginalized' href='#elision-2'>2</a></div><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='elision-2'><div class='marginalizedparent'><a class='marginalized' href='#elision-2'>2</a></div><p >[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Thing {
 public:
   Thing();
@@ -485,11 +486,11 @@ constexpr A g() {
   return a;
 }
 
-constexpr A a;        <span class='comment'>// well-formed, <span class='texttt'>a.p</span> points to <span class='texttt'>a</span>
-</span>constexpr A b = g();  <span class='comment'>// well-formed, <span class='texttt'>b.p</span> points to <span class='texttt'>b</span>
+constexpr A a;          <span class='comment'>// well-formed, <span class='texttt'>a.p</span> points to <span class='texttt'>a</span>
+</span>constexpr A b = g();    <span class='comment'>// well-formed, <span class='texttt'>b.p</span> points to <span class='texttt'>b</span>
 </span>
 void g() {
-  A c = g();          <span class='comment'>// well-formed, <span class='texttt'>c.p</span> may point to <span class='texttt'>c</span> or to an ephemeral temporary
+  A c = g();            <span class='comment'>// well-formed, <span class='texttt'>c.p</span> may point to <span class='texttt'>c</span> or to an ephemeral temporary
 </span>}
 </pre><p >Here the criteria for elision can
 eliminate
@@ -523,10 +524,13 @@ If the first overload resolution fails or was not performed,
 or if the type of the first parameter of the selected
 constructor is not an rvalue reference to the object's type (possibly cv-qualified),
 overload resolution is performed again, considering the object as an lvalue.
-[&nbsp;<i>Note:</i> This two-stage overload resolution must be performed regardless
+[&nbsp;<i>Note:</i>
+This two-stage overload resolution must be performed regardless
 of whether copy elision will occur. It determines the constructor to be called if
 elision is not performed, and the selected constructor must be accessible even if
-the call is elided. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p >[&nbsp;<i>Example:</i>
+the call is elided.
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]
+[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 class Thing {
 public:
@@ -540,11 +544,11 @@ private:
 Thing f(bool b) {
   Thing t;
   if (b)
-    throw t;                    <span class='comment'>// OK: <span class='texttt'>Thing(Thing&amp;&amp;)</span> used (or elided) to throw <span class='texttt'>t</span>
-</span>  return t;                     <span class='comment'>// OK: <span class='texttt'>Thing(Thing&amp;&amp;)</span> used (or elided) to return <span class='texttt'>t</span>
+    throw t;            <span class='comment'>// OK: <span class='texttt'>Thing(Thing&amp;&amp;)</span> used (or elided) to throw <span class='texttt'>t</span>
+</span>  return t;             <span class='comment'>// OK: <span class='texttt'>Thing(Thing&amp;&amp;)</span> used (or elided) to return <span class='texttt'>t</span>
 </span>}
 
-Thing t2 = f(false);            <span class='comment'>// OK: no extra copy/move performed, <span class='texttt'>t2</span> constructed by call to <span class='texttt'>f</span>
+Thing t2 = f(false);    <span class='comment'>// OK: no extra copy/move performed, <span class='texttt'>t2</span> constructed by call to <span class='texttt'>f</span>
 </span>
 struct Weird {
   Weird();
@@ -553,8 +557,7 @@ struct Weird {
 
 Weird g() {
   Weird w;
-  return w;                     <span class='comment'>// OK: first overload resolution fails,
-</span>                                <span class='comment'>// second overload resolution selects <span class='texttt'>Weird(Weird&amp;)</span>
+  return w;             <span class='comment'>// OK: first overload resolution fails, second overload resolution selects <span class='texttt'>Weird(Weird&amp;)</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div><div class='footnote' id='footnote-122'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-122'>122)</a></div><p >Because only one object is destroyed instead of two,
