--- a/class.derived.html
+++ b/class.derived.html
@@ -125,10 +125,10 @@ The use of more than one direct base class is often called multiple inheritance.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-class A { <span class='comment'>/* ... */</span> };
-class B { <span class='comment'>/* ... */</span> };
-class C { <span class='comment'>/* ... */</span> };
-class D : public A, public B, public C { <span class='comment'>/* ... */</span> };
+class A { <span class='texttt'>/* ... */</span> };
+class B { <span class='texttt'>/* ... */</span> };
+class C { <span class='texttt'>/* ... */</span> };
+class D : public A, public B, public C { <span class='texttt'>/* ... */</span> };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.mi-2'><div class='marginalizedparent'><a class='marginalized' href='#class.mi-2'>2</a></div><p ><span class='indexparent'><a class='index' id='layout,class_object'></a></span><span class='indexparent'><a class='index' id='initialization,order_of'></a></span>[&nbsp;<i>Note:</i>
 The order of derivation is not significant except as specified by the
 semantics of initialization by constructor (<a href='class.base.init'>[class.base.init]</a>),
@@ -146,15 +146,15 @@ unambiguously referred to.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-class X { <span class='comment'>/* ... */</span> };
-class Y : public X, public X { <span class='comment'>/* ... */</span> };             <span class='comment'>// ill-formed
+class X { <span class='texttt'>/* ... */</span> };
+class Y : public X, public X { <span class='texttt'>/* ... */</span> };             <span class='comment'>// ill-formed
 </span>
 </pre><pre class='codeblock'>
-class L { public: int next;  <span class='comment'>/* ... */</span> };
-class A : public L { <span class='comment'>/* ... */</span> };
-class B : public L { <span class='comment'>/* ... */</span> };
-class C : public A, public B { void f(); <span class='comment'>/* ... */</span> };   <span class='comment'>// well-formed
-</span>class D : public A, public L { void f(); <span class='comment'>/* ... */</span> };   <span class='comment'>// well-formed
+class L { public: int next;  <span class='texttt'>/* ... */</span> };
+class A : public L { <span class='texttt'>/* ... */</span> };
+class B : public L { <span class='texttt'>/* ... */</span> };
+class C : public A, public B { void f(); <span class='texttt'>/* ... */</span> };   <span class='comment'>// well-formed
+</span>class D : public A, public L { void f(); <span class='texttt'>/* ... */</span> };   <span class='comment'>// well-formed
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.mi-4'><div class='marginalizedparent'><a class='marginalized' href='#class.mi-4'>4</a></div><p ><span class='indexparent'><a class='index' id='base_class,virtual'></a></span>A base class specifier that does not contain the keyword
 <span class='texttt'>virtual</span>, specifies a <span class='grammarterm'>non-virtual</span> base class. A base
 class specifier that contains the keyword <span class='texttt'>virtual</span>, specifies a
@@ -225,10 +225,10 @@ void C::f() { A::next = B::next; }      <span class='comment'>// well-formed
 <span class='texttt'>C::f</span> above would be ill-formed because of
 ambiguity (<a href='class.member.lookup'>[class.member.lookup]</a>).</p></div><div class='para' id='class.mi-6'><div class='marginalizedparent'><a class='marginalized' href='#class.mi-6'>6</a></div><p >For another example,
 </p><pre class='codeblock'>
-class V { <span class='comment'>/* ... */</span> };
-class A : virtual public V { <span class='comment'>/* ... */</span> };
-class B : virtual public V { <span class='comment'>/* ... */</span> };
-class C : public A, public B { <span class='comment'>/* ... */</span> };
+class V { <span class='texttt'>/* ... */</span> };
+class A : virtual public V { <span class='texttt'>/* ... */</span> };
+class B : virtual public V { <span class='texttt'>/* ... */</span> };
+class C : public A, public B { <span class='texttt'>/* ... */</span> };
 </pre><p >for an object <span class='texttt'>c</span> of class type <span class='texttt'>C</span>, a single subobject of
 type <span class='texttt'>V</span> is shared by every base subobject of <span class='texttt'>c</span> that has a
 <span class='texttt'>virtual</span> base class of type <span class='texttt'>V</span>. Given the class <span class='texttt'>C</span>
@@ -278,11 +278,11 @@ class <span class='texttt'>V</span>, as shown in Figure <a href='#fig:virt'>[fig
 <br>Figure <a href='#fig:virt'>4</a> — Virtual base</div></div><div class='para' id='class.mi-7'><div class='marginalizedparent'><a class='marginalized' href='#class.mi-7'>7</a></div><p >A class can have both virtual and non-virtual base classes of a given
 type.
 </p><pre class='codeblock'>
-class B { <span class='comment'>/* ... */</span> };
-class X : virtual public B { <span class='comment'>/* ... */</span> };
-class Y : virtual public B { <span class='comment'>/* ... */</span> };
-class Z : public B { <span class='comment'>/* ... */</span> };
-class AA : public X, public Y, public Z { <span class='comment'>/* ... */</span> };
+class B { <span class='texttt'>/* ... */</span> };
+class X : virtual public B { <span class='texttt'>/* ... */</span> };
+class Y : virtual public B { <span class='texttt'>/* ... */</span> };
+class Z : public B { <span class='texttt'>/* ... */</span> };
+class AA : public X, public Y, public Z { <span class='texttt'>/* ... */</span> };
 </pre><p >For an object of class <span class='texttt'>AA</span>, all <span class='texttt'>virtual</span> occurrences of
 base class <span class='texttt'>B</span> in the class lattice of <span class='texttt'>AA</span> correspond to a
 single <span class='texttt'>B</span> subobject within the object of type <span class='texttt'>AA</span>, and
@@ -838,7 +838,7 @@ suppresses the virtual call mechanism.
 class B { public: virtual void f(); };
 class D : public B { public: void f(); };
 
-void D::f() { <span class='comment'>/* ... */</span> B::f(); }
+void D::f() { <span class='texttt'>/* ... */</span> B::f(); }
 </pre><p >Here, the function call in
 <span class='texttt'>D::f</span>
 really does call
@@ -875,7 +875,7 @@ with (<a href='class.dtor'>[class.dtor]</a>), the <i ><a href='expr.prim.id.qual
 syntax (<a href='expr.prim'>[expr.prim]</a>).
 [&nbsp;<i>Example:</i>
 <span class='indexparent'><a class='index' id='example,pure_virtual_function'></a></span></p><pre class='codeblock'>
-class point { <span class='comment'>/* ... */</span> };
+class point { <span class='texttt'>/* ... */</span> };
 class shape {                   <span class='comment'>// abstract class
 </span>  point center;
 public:
