--- a/class.expl.init.html
+++ b/class.expl.init.html
@@ -14,7 +14,8 @@ using the
 form of initialization.
 Either direct-initialization semantics or copy-initialization semantics apply;
 see <a href='dcl.init'>[dcl.init]</a>.
-<span class='indexparent'><a class='index' id='example,constructor_and_initialization'></a></span>[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<span class='indexparent'><a class='index' id='example,constructor_and_initialization'></a></span>[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct complex {
   complex();
   complex(double);
@@ -23,24 +24,17 @@ struct complex {
 
 complex sqrt(complex,complex);
 
-complex a(1);                   <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex(double)</span>
+complex a(1);                   <span class='comment'>// initialize by a call of <span class='texttt'>complex(double)</span>
 </span>complex b = a;                  <span class='comment'>// initialize by a copy of <span class='texttt'>a</span>
-</span>complex c = complex(1,2);       <span class='comment'>// construct <span class='texttt'>complex(1,2)</span>
-</span>                                <span class='comment'>// using <span class='texttt'>complex(double,double)</span>
+</span>complex c = complex(1,2);       <span class='comment'>// construct <span class='texttt'>complex(1,2)</span> using <span class='texttt'>complex(double,double)</span>,
 </span>                                <span class='comment'>// copy/move it into <span class='texttt'>c</span>
-</span>complex d = sqrt(b,c);          <span class='comment'>// call <span class='texttt'>sqrt(complex,complex)</span>
-</span>                                <span class='comment'>// and copy/move the result into <span class='texttt'>d</span>
-</span>complex e;                      <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex()</span>
-</span>complex f = 3;                  <span class='comment'>// construct <span class='texttt'>complex(3)</span> using
-</span>                                <span class='comment'>// <span class='texttt'>complex(double)</span>
-</span>                                <span class='comment'>// copy/move it into <span class='texttt'>f</span>
-</span>complex g = { 1, 2 };           <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex(double, double)</span>
+</span>complex d = sqrt(b,c);          <span class='comment'>// call <span class='texttt'>sqrt(complex,complex)</span> and copy/move the result into <span class='texttt'>d</span>
+</span>complex e;                      <span class='comment'>// initialize by a call of <span class='texttt'>complex()</span>
+</span>complex f = 3;                  <span class='comment'>// construct <span class='texttt'>complex(3)</span> using <span class='texttt'>complex(double)</span>, copy/move it into <span class='texttt'>f</span>
+</span>complex g = { 1, 2 };           <span class='comment'>// initialize by a call of <span class='texttt'>complex(double, double)</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
-<span class='indexparent'><a class='index' id='initialization,overloaded_assignment_and'></a></span>overloading of the assignment operator (<a href='over.ass'>[over.ass]</a>)
+<span class='indexparent'><a class='index' id='initialization,overloaded_assignment_and'></a></span>Overloading of the assignment operator (<a href='over.ass'>[over.ass]</a>)
 has no effect on initialization.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='indexparent'><a class='index' id='initialization,array_of_class_objects'></a></span><span class='indexparent'><a class='index' id='constructor,array_of_class_objects_and'></a></span>An object of class type can also be initialized by a
 <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i>. List-initialization semantics apply;
