--- a/class.free.html
+++ b/class.free.html
@@ -3,7 +3,8 @@
 Any allocation function for a class
 <span class='texttt'>T</span>
 is a static member (even if not explicitly declared
-<span class='texttt'>static</span>).</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<span class='texttt'>static</span>).</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Arena;
 struct B {
   void* operator new(std::size_t, Arena*);
@@ -59,7 +60,7 @@ class Y {
 <span class='texttt'>static</span>
 they cannot be virtual.
 [&nbsp;<i>Note:</i>
-<span class='indexparent'><a class='index' id='example,destructor_and_delete'></a></span><span class='indexparent'><a class='index' id='example,scope_of_delete'></a></span>however, when the
+<span class='indexparent'><a class='index' id='example,destructor_and_delete'></a></span><span class='indexparent'><a class='index' id='example,scope_of_delete'></a></span>However, when the
 <i ><a href='expr.cast#nt:cast-expression'>cast-expression</a></i>
 of a
 <i ><a href='expr.delete#nt:delete-expression'>delete-expression</a></i>
@@ -67,7 +68,8 @@ refers to an object of class type,
 because the deallocation function actually called is looked up in the scope of
 the class that is the dynamic type of the object,
 if the destructor is virtual, the effect is the same.
-For example,</p><pre class='codeblock'>
+For example,
+</p><pre class='codeblock'>
 struct B {
   virtual ~B();
   void operator delete(void*, std::size_t);
@@ -94,7 +96,8 @@ called when the
 of a
 <i ><a href='expr.delete#nt:delete-expression'>delete-expression</a></i>
 refers to an array of objects of class type.
-For example,</p><pre class='codeblock'>
+For example,
+</p><pre class='codeblock'>
 struct B {
   virtual ~B();
   void operator delete[](void*, std::size_t);
@@ -114,7 +117,7 @@ void f(int i) {
 Hence, even though a different one might actually be executed,
 the statically visible deallocation function is required to be accessible.
 [&nbsp;<i>Example:</i>
-for the call on line //1 above,
+For the call on line “// 1” above,
 if
 <span class='texttt'>B::operator delete()</span>
 had been
