--- a/class.friend.html
+++ b/class.friend.html
@@ -32,10 +32,10 @@ class A {
   friend class X;
 };
 
-struct X : A::B {   <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to friend
-</span>  A::B mx;          <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to member of friend
+struct X : A::B {               <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to friend
+</span>  A::B mx;                      <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to member of friend
 </span>  class Y {
-    A::B my;        <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to nested member of friend
+    A::B my;                    <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to nested member of friend
 </span>  };
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
@@ -46,16 +46,16 @@ class X {
 };
 
 class Y {
-  int v[X::a];      <span class='comment'>// OK, <span class='texttt'>Y</span> is a friend of <span class='texttt'>X</span>
+  int v[X::a];                  <span class='comment'>// OK, <span class='texttt'>Y</span> is a friend of <span class='texttt'>X</span>
 </span>};
 
 class Z {
-  int v[X::a];      <span class='comment'>// error: <span class='texttt'>X::a</span> is private
+  int v[X::a];                  <span class='comment'>// error: <span class='texttt'>X::a</span> is private
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p >A class shall not be defined in a friend declaration. [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 class A {
-  friend class B { }; <span class='comment'>// error: cannot define class in friend declaration
+  friend class B { };           <span class='comment'>// error: cannot define class in friend declaration
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >A <span class='texttt'>friend</span> declaration that does not declare a function
 shall have one of the following forms:</p><pre class='bnf'><span class='terminal'>friend</span> <i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i> <span class='terminal'>;</span>
@@ -70,21 +70,21 @@ class C;
 typedef C Ct;
 
 class X1 {
-  friend C;         <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
+  friend C;                     <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
 </span>};
 
 class X2 {
-  friend Ct;        <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
-</span>  friend D;         <span class='comment'>// error: no type-name <span class='texttt'>D</span> in scope
-</span>  friend class D;   <span class='comment'>// OK: elaborated-type-specifier declares new class
+  friend Ct;                    <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
+</span>  friend D;                     <span class='comment'>// error: no type-name <span class='texttt'>D</span> in scope
+</span>  friend class D;               <span class='comment'>// OK: elaborated-type-specifier declares new class
 </span>};
 
 template &lt;typename T&gt; class R {
   friend T;
 };
 
-R&lt;C&gt; rc;            <span class='comment'>// <span class='texttt'>class C</span> is a friend of <span class='texttt'>R&lt;C&gt;</span>
-</span>R&lt;int&gt; Ri;          <span class='comment'>// OK: <span class='texttt'>"friend int;"</span> is ignored
+R&lt;C&gt; rc;                        <span class='comment'>// <span class='texttt'>class C</span> is a friend of <span class='texttt'>R&lt;C&gt;</span>
+</span>R&lt;int&gt; Ri;                      <span class='comment'>// OK: <span class='texttt'>"friend int;"</span> is ignored
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='friend_function,linkage_of'></a></span>A function first declared in a friend declaration
 has the linkage of the namespace of which it is a member (<a href='basic.link'>[basic.link]</a>).
 Otherwise, the function retains its previous linkage (<a href='dcl.stc'>[dcl.stc]</a>).</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='declaration,overloaded_name_and_friend'></a></span>When a
@@ -140,15 +140,13 @@ class B {
 
 class C  {
   void f(A* p) {
-    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>C</span> is not a friend of <span class='texttt'>A</span>
-</span>                    <span class='comment'>// despite being a friend of a friend
+    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>C</span> is not a friend of <span class='texttt'>A</span> despite being a friend of a friend
 </span>  }
 };
 
 class D : public B  {
   void f(A* p) {
-    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>D</span> is not a friend of <span class='texttt'>A</span>
-</span>                    <span class='comment'>// despite being derived from a friend
+    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>D</span> is not a friend of <span class='texttt'>A</span> despite being derived from a friend
 </span>  }
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><p ><span class='indexparent'><a class='index' id='local_class,friend'></a></span><span class='indexparent'><a class='index' id='friend,local_class_and'></a></span>If a friend declaration appears in a local class (<a href='class.local'>[class.local]</a>) and the
