--- a/class.html
+++ b/class.html
@@ -179,32 +179,31 @@ scope where a variable, function, or enumerator of the same name is also
 declared, then when both declarations are in scope, the class can be
 referred to only using an
 <i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i> (<a href='basic.lookup.elab'>[basic.lookup.elab]</a>).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct stat {
   <span class='comment'>// ...
 </span>};
 
-stat gstat;                     <span class='comment'>// use plain <span class='texttt'>stat</span> to
-</span>                                <span class='comment'>// define variable
+stat gstat;                     <span class='comment'>// use plain <span class='texttt'>stat</span> to define variable
 </span>
 int stat(struct stat*);         <span class='comment'>// redeclare <span class='texttt'>stat</span> as function
 </span>
 void f() {
-  struct stat* ps;              <span class='comment'>// <span class='texttt'>struct</span> prefix needed
-</span>                                <span class='comment'>// to name <span class='texttt'>struct stat</span>
+  struct stat* ps;              <span class='comment'>// <span class='texttt'>struct</span> prefix needed to name <span class='texttt'>struct stat</span>
 </span>  stat(ps);                     <span class='comment'>// call <span class='texttt'>stat()</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
-<span class='indexparent'><a class='index' id='class_name,elaborated'></a></span><span class='indexparent'><a class='index' id='declaration,forward_class'></a></span>A <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> consisting solely of <span class='grammarterm'>class-key
-identifier;</span> is either a redeclaration of the name in the current scope
+<span class='indexparent'><a class='index' id='class_name,elaborated'></a></span><span class='indexparent'><a class='index' id='declaration,forward_class'></a></span>A <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> consisting solely of <i ><a href='class#nt:class-key'>class-key</a></i>
+<i ><a href='lex.name#nt:identifier'>identifier</a></i><span class='texttt'>;</span> is either a redeclaration of the name in the current scope
 or a forward declaration of the identifier as a class name. It
 introduces the class name into the current scope.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct s { int a; };
 
 void g() {
-  struct s;                     <span class='comment'>// hide global <span class='texttt'>struct s</span>
-</span>                                <span class='comment'>// with a block-scope declaration
+  struct s;                     <span class='comment'>// hide global <span class='texttt'>struct s</span> with a block-scope declaration
 </span>  s* p;                         <span class='comment'>// refer to local <span class='texttt'>struct s</span>
 </span>  struct s { char* p; };        <span class='comment'>// define local <span class='texttt'>struct s</span>
 </span>  struct s;                     <span class='comment'>// redeclaration, has no effect
@@ -212,7 +211,8 @@ void g() {
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
 Such declarations allow definition of classes that refer to each other.
-<span class='indexparent'><a class='index' id='example,friend'></a></span>[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<span class='indexparent'><a class='index' id='example,friend'></a></span>[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Vector;
 
 class Matrix {
@@ -454,8 +454,8 @@ struct T1 { int a, b; };
 struct T2 { int c; double d; };
 union U { T1 t1; T2 t2; };
 int f() {
-  U u = { { 1, 2 } }; <span class='comment'>// active member is <span class='texttt'>t1</span>
-</span>  return u.t2.c;      <span class='comment'>// OK, as if <span class='texttt'>u.t1.a</span> were nominated
+  U u = { { 1, 2 } };   <span class='comment'>// active member is <span class='texttt'>t1</span>
+</span>  return u.t2.c;        <span class='comment'>// OK, as if <span class='texttt'>u.t1.a</span> were nominated
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
@@ -854,7 +854,7 @@ A a;
 void f() {
   a.b = TRUE;
   if (a.b == TRUE)              <span class='comment'>// yields <span class='texttt'>true</span>
-</span>    { <span class='comment'>/* ... */</span> }
+</span>    { <span class='texttt'>/* ... */</span> }
 }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='nest'><h3 ><a class='secnum' href='#nest' style='min-width:103pt'>9.2.5</a> Nested class declarations <a class='abbr_ref' href='class.nest'>[class.nest]</a></h3><p ><span class='indexparent'><a class='index' id='definition,nested_class'></a></span><span class='indexparent'><a class='index' id='class_local'></a></span><span class='indexparent'><a class='index' id='class_nested'></a></span></p><div class='para' id='nest-1'><div class='marginalizedparent'><a class='marginalized' href='#nest-1'>1</a></div><p >A class can be declared within another class. A class declared within
 another is called a <span class='grammarterm'>nested</span> class. The name of a nested class
@@ -898,7 +898,7 @@ struct enclose {
 
 int enclose::inner::x = 1;
 
-void enclose::inner::f(int i) { <span class='comment'>/* ... */</span> }
+void enclose::inner::f(int i) { <span class='texttt'>/* ... */</span> }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='nest-3'><div class='marginalizedparent'><a class='marginalized' href='#nest-3'>3</a></div><p >If class <span class='texttt'>X</span> is defined in a namespace scope, a nested class
 <span class='texttt'>Y</span> may be declared in class <span class='texttt'>X</span> and later defined in the
 definition of class <span class='texttt'>X</span> or be later defined in a namespace scope
@@ -921,7 +921,7 @@ outside their class without qualification.
 [&nbsp;<i>Example:</i></p><p ><span class='indexparent'><a class='index' id='example,nested_type_name'></a></span></p><pre class='codeblock'>
 struct X {
   typedef int I;
-  class Y { <span class='comment'>/* ... */</span> };
+  class Y { <span class='texttt'>/* ... */</span> };
   I a;
 };
 
@@ -1019,21 +1019,21 @@ union A { int x; int y[4]; };
 struct B { A a; };
 union C { B b; int k; };
 int f() {
-  C c;               <span class='comment'>// does not start lifetime of any union member
-</span>  c.b.a.y[3] = 4;    <span class='comment'>// OK: <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>c.b.a.y[3]</span><span class='math'>)</span> contains <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>;
-</span>                     <span class='comment'>// creates objects to hold union members <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>
-</span>  return c.b.a.y[3]; <span class='comment'>// OK: <span class='texttt'>c.b.a.y</span> refers to newly created object (see <a href='basic.life'>[basic.life]</a>)
+  C c;                  <span class='comment'>// does not start lifetime of any union member
+</span>  c.b.a.y[3] = 4;       <span class='comment'>// OK: <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>c.b.a.y[3]</span><span class='math'>)</span> contains <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>;
+</span>                        <span class='comment'>// creates objects to hold union members <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>
+</span>  return c.b.a.y[3];    <span class='comment'>// OK: <span class='texttt'>c.b.a.y</span> refers to newly created object (see <a href='basic.life'>[basic.life]</a>)
 </span>}
 
 struct X { const int a; int b; };
 union Y { X x; int k; };
 void g() {
-  Y y = { { 1, 2 } }; <span class='comment'>// OK, <span class='texttt'>y.x</span> is active union member (<a href='class.mem'>[class.mem]</a>)
+  Y y = { { 1, 2 } };   <span class='comment'>// OK, <span class='texttt'>y.x</span> is active union member (<a href='class.mem'>[class.mem]</a>)
 </span>  int n = y.x.a;
-  y.k = 4;   <span class='comment'>// OK: ends lifetime of <span class='texttt'>y.x</span>, <span class='texttt'>y.k</span> is active member of union
-</span>  y.x.b = n; <span class='comment'>// undefined behavior: <span class='texttt'>y.x.b</span> modified outside its lifetime,
-</span>             <span class='comment'>// <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>y.x.b</span><span class='math'>)</span> is empty because <span class='texttt'>X</span>'s default constructor is deleted,
-</span>             <span class='comment'>// so union member <span class='texttt'>y.x</span>'s lifetime does not implicitly start
+  y.k = 4;              <span class='comment'>// OK: ends lifetime of <span class='texttt'>y.x</span>, <span class='texttt'>y.k</span> is active member of union
+</span>  y.x.b = n;            <span class='comment'>// undefined behavior: <span class='texttt'>y.x.b</span> modified outside its lifetime,
+</span>                        <span class='comment'>// <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>y.x.b</span><span class='math'>)</span> is empty because <span class='texttt'>X</span>'s default constructor is deleted,
+</span>                        <span class='comment'>// so union member <span class='texttt'>y.x</span>'s lifetime does not implicitly start
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='union-6'><div class='marginalizedparent'><a class='marginalized' href='#union-6'>6</a></div><p >[&nbsp;<i>Note:</i> In general, one must use explicit destructor calls and placement
 <i ><a href='expr.new#nt:new-expression'>new-expression</a></i> to change the active member of a union. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
@@ -1078,8 +1078,8 @@ member functions.</p></div><div class='para' id='union.anon-3'><div class='margi
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 void f() {
   union { int aa; char* p; } obj, *ptr = &amp;obj;
-  aa = 1;                         <span class='comment'>// error
-</span>  ptr-&gt;aa = 1;                    <span class='comment'>// OK
+  aa = 1;           <span class='comment'>// error
+</span>  ptr-&gt;aa = 1;      <span class='comment'>// OK
 </span>}
 </pre><p >The assignment to plain <span class='texttt'>aa</span> is ill-formed since the member name
 is not visible outside the union, and even if it were visible, it is not
@@ -1094,7 +1094,8 @@ If <span class='texttt'>X</span> is a union, a non-static data member of <span c
 union is a variant member of <span class='texttt'>X</span>. In addition, a non-static data member of an
 anonymous union that is a member of <span class='texttt'>X</span> is also a variant member of <span class='texttt'>X</span>.
 At most one variant member of a union may have a default member initializer.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 union U {
   int x = 0;
   union {
@@ -1102,7 +1103,7 @@ union U {
   };
   union {
     int z;
-    int y = 1; <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
+    int y = 1;      <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
 </span>  };
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div><div id='local'><h2 ><a class='secnum' href='#local' style='min-width:88pt'>9.4</a> Local class declarations <a class='abbr_ref' href='class.local'>[class.local]</a></h2><p ><span class='indexparent'><a class='index' id='declaration,local_class'></a></span><span class='indexparent'><a class='index' id='definition,local_class'></a></span>
