--- a/class.init.html
+++ b/class.init.html
@@ -26,7 +26,8 @@ using the
 form of initialization.
 Either direct-initialization semantics or copy-initialization semantics apply;
 see <a href='dcl.init'>[dcl.init]</a>.
-<span class='indexparent'><a class='index' id='example,constructor_and_initialization'></a></span>[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<span class='indexparent'><a class='index' id='example,constructor_and_initialization'></a></span>[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct complex {
   complex();
   complex(double);
@@ -35,24 +36,17 @@ struct complex {
 
 complex sqrt(complex,complex);
 
-complex a(1);                   <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex(double)</span>
+complex a(1);                   <span class='comment'>// initialize by a call of <span class='texttt'>complex(double)</span>
 </span>complex b = a;                  <span class='comment'>// initialize by a copy of <span class='texttt'>a</span>
-</span>complex c = complex(1,2);       <span class='comment'>// construct <span class='texttt'>complex(1,2)</span>
-</span>                                <span class='comment'>// using <span class='texttt'>complex(double,double)</span>
+</span>complex c = complex(1,2);       <span class='comment'>// construct <span class='texttt'>complex(1,2)</span> using <span class='texttt'>complex(double,double)</span>,
 </span>                                <span class='comment'>// copy/move it into <span class='texttt'>c</span>
-</span>complex d = sqrt(b,c);          <span class='comment'>// call <span class='texttt'>sqrt(complex,complex)</span>
-</span>                                <span class='comment'>// and copy/move the result into <span class='texttt'>d</span>
-</span>complex e;                      <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex()</span>
-</span>complex f = 3;                  <span class='comment'>// construct <span class='texttt'>complex(3)</span> using
-</span>                                <span class='comment'>// <span class='texttt'>complex(double)</span>
-</span>                                <span class='comment'>// copy/move it into <span class='texttt'>f</span>
-</span>complex g = { 1, 2 };           <span class='comment'>// initialize by a call of
-</span>                                <span class='comment'>// <span class='texttt'>complex(double, double)</span>
+</span>complex d = sqrt(b,c);          <span class='comment'>// call <span class='texttt'>sqrt(complex,complex)</span> and copy/move the result into <span class='texttt'>d</span>
+</span>complex e;                      <span class='comment'>// initialize by a call of <span class='texttt'>complex()</span>
+</span>complex f = 3;                  <span class='comment'>// construct <span class='texttt'>complex(3)</span> using <span class='texttt'>complex(double)</span>, copy/move it into <span class='texttt'>f</span>
+</span>complex g = { 1, 2 };           <span class='comment'>// initialize by a call of <span class='texttt'>complex(double, double)</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
-<span class='indexparent'><a class='index' id='initialization,overloaded_assignment_and'></a></span>overloading of the assignment operator (<a href='over.ass'>[over.ass]</a>)
+<span class='indexparent'><a class='index' id='initialization,overloaded_assignment_and'></a></span>Overloading of the assignment operator (<a href='over.ass'>[over.ass]</a>)
 has no effect on initialization.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='class.expl.init-2'><div class='marginalizedparent'><a class='marginalized' href='#class.expl.init-2'>2</a></div><p ><span class='indexparent'><a class='index' id='initialization,array_of_class_objects'></a></span><span class='indexparent'><a class='index' id='constructor,array_of_class_objects_and'></a></span>An object of class type can also be initialized by a
 <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i>. List-initialization semantics apply;
@@ -145,7 +139,7 @@ struct A { A(); };
 typedef A global_A;
 struct B { };
 struct C: public A, public B { C(); };
-C::C(): global_A() { }        <span class='comment'>// mem-initializer for base <span class='texttt'>A</span>
+C::C(): global_A() { }          <span class='comment'>// mem-initializer for base <span class='texttt'>A</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.base.init-4'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-4'>4</a></div><p >If a
 <i ><a href='class.base.init#nt:mem-initializer-id'>mem-initializer-id</a></i>
 is ambiguous because it designates both a direct non-virtual base class and
@@ -192,17 +186,18 @@ in a
 <i ><a href='class.base.init#nt:mem-initializer'>mem-initializer</a></i>
 is used to initialize the
 designated subobject (or, in the case of a delegating constructor, the complete class object)
-according to the initialization rules of <a href='dcl.init'>[dcl.init]</a> for direct-initialization.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
-struct B1 { B1(int); <span class='comment'>/* ... */</span> };
-struct B2 { B2(int); <span class='comment'>/* ... */</span> };
+according to the initialization rules of <a href='dcl.init'>[dcl.init]</a> for direct-initialization.
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
+struct B1 { B1(int); <span class='texttt'>/* ... */</span> };
+struct B2 { B2(int); <span class='texttt'>/* ... */</span> };
 struct D : B1, B2 {
   D(int);
   B1 b;
   const int c;
 };
 
-D::D(int a) : B2(a+1), B1(a+2), c(a+3), b(a+4)
-  { <span class='comment'>/* ... */</span> }
+D::D(int a) : B2(a+1), B1(a+2), c(a+3), b(a+4) { <span class='texttt'>/* ... */</span> }
 D d(10);
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
@@ -221,7 +216,7 @@ is ill-formed.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct A {
-  A() : v(42) { }  <span class='comment'>// error
+  A() : v(42) { }   <span class='comment'>// error
 </span>  const int&amp; v;
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.base.init-9'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-9'>9</a></div><p >In a non-delegating constructor, if
@@ -268,10 +263,10 @@ struct B {
 
 struct C {
   C() { }               <span class='comment'>// initializes members as follows:
-</span>  A a;                    <span class='comment'>// OK: calls <span class='texttt'>A::A()</span>
-</span>  const B b;              <span class='comment'>// error: <span class='texttt'>B</span> has no default constructor
-</span>  int i;                  <span class='comment'>// OK: <span class='texttt'>i</span> has indeterminate value
-</span>  int j = 5;              <span class='comment'>// OK: <span class='texttt'>j</span> has the value <span class='texttt'>5</span>
+</span>  A a;                  <span class='comment'>// OK: calls <span class='texttt'>A::A()</span>
+</span>  const B b;            <span class='comment'>// error: <span class='texttt'>B</span> has no default constructor
+</span>  int i;                <span class='comment'>// OK: <span class='texttt'>i</span> has indeterminate value
+</span>  int j = 5;            <span class='comment'>// OK: <span class='texttt'>j</span> has the value <span class='texttt'>5</span>
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.base.init-10'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-10'>10</a></div><p >If a given non-static data member has both a default member initializer
 and a <i ><a href='class.base.init#nt:mem-initializer'>mem-initializer</a></i>, the initialization specified by the
@@ -293,17 +288,18 @@ default member initializer is ill-formed.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct A {
-  A() = default;          <span class='comment'>// OK
-</span>  A(int v) : v(v) { }     <span class='comment'>// OK
-</span>  const int&amp; v = 42;      <span class='comment'>// OK
+  A() = default;        <span class='comment'>// OK
+</span>  A(int v) : v(v) { }   <span class='comment'>// OK
+</span>  const int&amp; v = 42;    <span class='comment'>// OK
 </span>};
-A a1;                     <span class='comment'>// error: ill-formed binding of temporary to reference
-</span>A a2(1);                  <span class='comment'>// OK, unfortunately
+A a1;                   <span class='comment'>// error: ill-formed binding of temporary to reference
+</span>A a2(1);                <span class='comment'>// OK, unfortunately
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.base.init-12'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-12'>12</a></div><p >In a non-delegating constructor, the destructor for each potentially constructed
 subobject of class type is potentially invoked (<a href='class.dtor'>[class.dtor]</a>).
 [&nbsp;<i>Note:</i> This provision ensures that destructors can be called for fully-constructed
 subobjects in case an exception is thrown (<a href='except.ctor'>[except.ctor]</a>). <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='class.base.init-13'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-13'>13</a></div><p >In a non-delegating constructor, initialization
-proceeds in the following order:</p><ul class='itemize'><li id='class.base.init-13.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.base.init-13.1'>(13.1)</a></div><p ><span class='indexparent'><a class='index' id='initialization,order_of_virtual_base_class'></a></span>First, and only for the constructor of the most derived class (<a href='intro.object'>[intro.object]</a>),
+proceeds in the following order:
+</p><ul class='itemize'><li id='class.base.init-13.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.base.init-13.1'>(13.1)</a></div><p ><span class='indexparent'><a class='index' id='initialization,order_of_virtual_base_class'></a></span>First, and only for the constructor of the most derived class (<a href='intro.object'>[intro.object]</a>),
 virtual base classes are initialized in the order they appear on a
 depth-first left-to-right traversal of the directed acyclic graph of
 base classes,
@@ -346,9 +342,9 @@ struct C : A, B, virtual V {
   C(int);
 };
 
-A::A(int i) : V(i) { <span class='comment'>/* ... */</span> }
-B::B(int i) { <span class='comment'>/* ... */</span> }
-C::C(int i) { <span class='comment'>/* ... */</span> }
+A::A(int i) : V(i) { <span class='texttt'>/* ... */</span> }
+B::B(int i) { <span class='texttt'>/* ... */</span> }
+C::C(int i) { <span class='texttt'>/* ... */</span> }
 
 V v(1);             <span class='comment'>// use <span class='texttt'>V(int)</span>
 </span>A a(2);             <span class='comment'>// use <span class='texttt'>V(int)</span>
@@ -415,7 +411,8 @@ However, if these operations are performed in a
 before all the
 <i ><a href='class.base.init#nt:mem-initializer'>mem-initializers</a></i>
 for base classes have completed, the program has undefined behavior.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class A {
 public:
   A(int);
@@ -425,8 +422,7 @@ class B : public A {
   int j;
 public:
   int f();
-  B() : A(f()),     <span class='comment'>// undefined: calls member function
-</span>                    <span class='comment'>// but base <span class='texttt'>A</span> not yet initialized
+  B() : A(f()),     <span class='comment'>// undefined: calls member function but base <span class='texttt'>A</span> not yet initialized
 </span>  j(f()) { }        <span class='comment'>// well-defined: bases are all initialized
 </span>};
 
@@ -438,8 +434,7 @@ public:
 class D : public B, C {
   int i;
 public:
-  D() : C(f()),     <span class='comment'>// undefined: calls member function
-</span>                    <span class='comment'>// but base <span class='texttt'>C</span> not yet initialized
+  D() : C(f()),     <span class='comment'>// undefined: calls member function but base <span class='texttt'>C</span> not yet initialized
 </span>  i(f()) { }        <span class='comment'>// well-defined: bases are all initialized
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.base.init-17'><div class='marginalizedparent'><a class='marginalized' href='#class.base.init-17'>17</a></div><p >[&nbsp;<i>Note:</i>
@@ -484,16 +479,16 @@ struct B2 {
 int get();
 
 struct D1 : B1 {
-  using B1::B1;  <span class='comment'>// inherits <span class='texttt'>B1(int, ...)</span>
+  using B1::B1;     <span class='comment'>// inherits <span class='texttt'>B1(int, ...)</span>
 </span>  int x;
   int y = get();
 };
 
 void test() {
-  D1 d(2, 3, 4); <span class='comment'>// OK: <span class='texttt'>B1</span> is initialized by calling <span class='texttt'>B1(2, 3, 4)</span>,
-</span>                 <span class='comment'>// then <span class='texttt'>d.x</span> is default-initialized (no initialization is performed),
-</span>                 <span class='comment'>// then <span class='texttt'>d.y</span> is initialized by calling <span class='texttt'>get()</span>
-</span>  D1 e;          <span class='comment'>// error: <span class='texttt'>D1</span> has a deleted default constructor
+  D1 d(2, 3, 4);    <span class='comment'>// OK: <span class='texttt'>B1</span> is initialized by calling <span class='texttt'>B1(2, 3, 4)</span>,
+</span>                    <span class='comment'>// then <span class='texttt'>d.x</span> is default-initialized (no initialization is performed),
+</span>                    <span class='comment'>// then <span class='texttt'>d.y</span> is initialized by calling <span class='texttt'>get()</span>
+</span>  D1 e;             <span class='comment'>// error: <span class='texttt'>D1</span> has a deleted default constructor
 </span>}
 
 struct D2 : B2 {
@@ -501,16 +496,16 @@ struct D2 : B2 {
   B1 b;
 };
 
-D2 f(1.0);       <span class='comment'>// error: <span class='texttt'>B1</span> has a deleted default constructor
+D2 f(1.0);          <span class='comment'>// error: <span class='texttt'>B1</span> has a deleted default constructor
 </span>
 struct W { W(int); };
 struct X : virtual W { using W::W; X() = delete; };
 struct Y : X { using X::X; };
 struct Z : Y, virtual W { using Y::Y; };
-Z z(0); <span class='comment'>// OK: initialization of <span class='texttt'>Y</span> does not invoke default constructor of <span class='texttt'>X</span>
+Z z(0);             <span class='comment'>// OK: initialization of <span class='texttt'>Y</span> does not invoke default constructor of <span class='texttt'>X</span>
 </span>
 template&lt;class T&gt; struct Log : T {
-  using T::T;    <span class='comment'>// inherits all constructors from class <span class='texttt'>T</span>
+  using T::T;       <span class='comment'>// inherits all constructors from class <span class='texttt'>T</span>
 </span>  ~Log() { std::clog &lt;&lt; "Destroying wrapper" &lt;&lt; std::endl; }
 };
 </pre><p >Class template <span class='texttt'>Log</span> wraps any class and forwards all of its constructors,
@@ -539,16 +534,16 @@ struct D2 : V1, V2 {
   using V2::V2;
 };
 
-D1 d1(0); <span class='comment'>// ill-formed: ambiguous
-</span>D2 d2(0); <span class='comment'>// OK: initializes virtual <span class='texttt'>B</span> base class, which initializes the <span class='texttt'>A</span> base class
-</span>          <span class='comment'>// then initializes the <span class='texttt'>V1</span> and <span class='texttt'>V2</span> base classes as if by a defaulted default constructor
+D1 d1(0);           <span class='comment'>// ill-formed: ambiguous
+</span>D2 d2(0);           <span class='comment'>// OK: initializes virtual <span class='texttt'>B</span> base class, which initializes the <span class='texttt'>A</span> base class
+</span>                    <span class='comment'>// then initializes the <span class='texttt'>V1</span> and <span class='texttt'>V2</span> base classes as if by a defaulted default constructor
 </span>
 struct M { M(); M(int); };
 struct N : M { using M::M; };
 struct O : M {};
 struct P : N, O { using N::N; using O::O; };
-P p(0); <span class='comment'>// OK: use <span class='texttt'>M(0)</span> to initialize <span class='texttt'>N</span>'s base class,
-</span>        <span class='comment'>// use <span class='texttt'>M()</span> to initialize <span class='texttt'>O</span>'s base class
+P p(0);             <span class='comment'>// OK: use <span class='texttt'>M(0)</span> to initialize <span class='texttt'>N</span>'s base class,
+</span>                    <span class='comment'>// use <span class='texttt'>M()</span> to initialize <span class='texttt'>O</span>'s base class
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.inhctor.init-3'><div class='marginalizedparent'><a class='marginalized' href='#class.inhctor.init-3'>3</a></div><p >When an object is initialized by an inherited constructor,
 initialization of the object is complete
 when the initialization of all subobjects is complete.</p></div></div></div></div></body></html>
