--- a/class.mem.html
+++ b/class.mem.html
@@ -198,8 +198,8 @@ struct T1 { int a, b; };
 struct T2 { int c; double d; };
 union U { T1 t1; T2 t2; };
 int f() {
-  U u = { { 1, 2 } }; <span class='comment'>// active member is <span class='texttt'>t1</span>
-</span>  return u.t2.c;      <span class='comment'>// OK, as if <span class='texttt'>u.t1.a</span> were nominated
+  U u = { { 1, 2 } };   <span class='comment'>// active member is <span class='texttt'>t1</span>
+</span>  return u.t2.c;        <span class='comment'>// OK, as if <span class='texttt'>u.t1.a</span> were nominated
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
@@ -598,7 +598,7 @@ A a;
 void f() {
   a.b = TRUE;
   if (a.b == TRUE)              <span class='comment'>// yields <span class='texttt'>true</span>
-</span>    { <span class='comment'>/* ... */</span> }
+</span>    { <span class='texttt'>/* ... */</span> }
 }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='class.nest'><h3 ><a class='secnum' href='#class.nest' style='min-width:103pt'>9.2.5</a> Nested class declarations <a class='abbr_ref' href='class.nest'>[class.nest]</a></h3><p ><span class='indexparent'><a class='index' id='definition,nested_class'></a></span><span class='indexparent'><a class='index' id='class_local'></a></span><span class='indexparent'><a class='index' id='class_nested'></a></span></p><div class='para' id='class.nest-1'><div class='marginalizedparent'><a class='marginalized' href='#class.nest-1'>1</a></div><p >A class can be declared within another class. A class declared within
 another is called a <span class='grammarterm'>nested</span> class. The name of a nested class
@@ -642,7 +642,7 @@ struct enclose {
 
 int enclose::inner::x = 1;
 
-void enclose::inner::f(int i) { <span class='comment'>/* ... */</span> }
+void enclose::inner::f(int i) { <span class='texttt'>/* ... */</span> }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.nest-3'><div class='marginalizedparent'><a class='marginalized' href='#class.nest-3'>3</a></div><p >If class <span class='texttt'>X</span> is defined in a namespace scope, a nested class
 <span class='texttt'>Y</span> may be declared in class <span class='texttt'>X</span> and later defined in the
 definition of class <span class='texttt'>X</span> or be later defined in a namespace scope
@@ -665,7 +665,7 @@ outside their class without qualification.
 [&nbsp;<i>Example:</i></p><p ><span class='indexparent'><a class='index' id='example,nested_type_name'></a></span></p><pre class='codeblock'>
 struct X {
   typedef int I;
-  class Y { <span class='comment'>/* ... */</span> };
+  class Y { <span class='texttt'>/* ... */</span> };
   I a;
 };
 
