--- a/class.name.html
+++ b/class.name.html
@@ -25,32 +25,31 @@ scope where a variable, function, or enumerator of the same name is also
 declared, then when both declarations are in scope, the class can be
 referred to only using an
 <i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i> (<a href='basic.lookup.elab'>[basic.lookup.elab]</a>).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct stat {
   <span class='comment'>// ...
 </span>};
 
-stat gstat;                     <span class='comment'>// use plain <span class='texttt'>stat</span> to
-</span>                                <span class='comment'>// define variable
+stat gstat;                     <span class='comment'>// use plain <span class='texttt'>stat</span> to define variable
 </span>
 int stat(struct stat*);         <span class='comment'>// redeclare <span class='texttt'>stat</span> as function
 </span>
 void f() {
-  struct stat* ps;              <span class='comment'>// <span class='texttt'>struct</span> prefix needed
-</span>                                <span class='comment'>// to name <span class='texttt'>struct stat</span>
+  struct stat* ps;              <span class='comment'>// <span class='texttt'>struct</span> prefix needed to name <span class='texttt'>struct stat</span>
 </span>  stat(ps);                     <span class='comment'>// call <span class='texttt'>stat()</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
-<span class='indexparent'><a class='index' id='class_name,elaborated'></a></span><span class='indexparent'><a class='index' id='declaration,forward_class'></a></span>A <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> consisting solely of <span class='grammarterm'>class-key
-identifier;</span> is either a redeclaration of the name in the current scope
+<span class='indexparent'><a class='index' id='class_name,elaborated'></a></span><span class='indexparent'><a class='index' id='declaration,forward_class'></a></span>A <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> consisting solely of <i ><a href='class#nt:class-key'>class-key</a></i>
+<i ><a href='lex.name#nt:identifier'>identifier</a></i><span class='texttt'>;</span> is either a redeclaration of the name in the current scope
 or a forward declaration of the identifier as a class name. It
 introduces the class name into the current scope.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct s { int a; };
 
 void g() {
-  struct s;                     <span class='comment'>// hide global <span class='texttt'>struct s</span>
-</span>                                <span class='comment'>// with a block-scope declaration
+  struct s;                     <span class='comment'>// hide global <span class='texttt'>struct s</span> with a block-scope declaration
 </span>  s* p;                         <span class='comment'>// refer to local <span class='texttt'>struct s</span>
 </span>  struct s { char* p; };        <span class='comment'>// define local <span class='texttt'>struct s</span>
 </span>  struct s;                     <span class='comment'>// redeclaration, has no effect
@@ -58,7 +57,8 @@ void g() {
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Note:</i>
 Such declarations allow definition of classes that refer to each other.
-<span class='indexparent'><a class='index' id='example,friend'></a></span>[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+<span class='indexparent'><a class='index' id='example,friend'></a></span>[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Vector;
 
 class Matrix {
