--- a/class.nested.type.html
+++ b/class.nested.type.html
@@ -5,7 +5,7 @@ outside their class without qualification.
 [&nbsp;<i>Example:</i></p><p ><span class='indexparent'><a class='index' id='example,nested_type_name'></a></span></p><pre class='codeblock'>
 struct X {
   typedef int I;
-  class Y { <span class='comment'>/* ... */</span> };
+  class Y { <span class='texttt'>/* ... */</span> };
   I a;
 };
 
