--- a/class.protected.html
+++ b/class.protected.html
@@ -28,8 +28,7 @@ void fr(B* pb, D1* p1, D2* p2) {
   pb-&gt;i = 1;                    <span class='comment'>// ill-formed
 </span>  p1-&gt;i = 2;                    <span class='comment'>// ill-formed
 </span>  p2-&gt;i = 3;                    <span class='comment'>// OK (access through a <span class='texttt'>D2</span>)
-</span>  p2-&gt;B::i = 4;                 <span class='comment'>// OK (access through a <span class='texttt'>D2</span>, even though
-</span>                                <span class='comment'>// naming class is <span class='texttt'>B</span>)
+</span>  p2-&gt;B::i = 4;                 <span class='comment'>// OK (access through a <span class='texttt'>D2</span>, even though naming class is <span class='texttt'>B</span>)
 </span>  int B::* pmi_B = &amp;B::i;       <span class='comment'>// ill-formed
 </span>  int B::* pmi_B2 = &amp;D2::i;     <span class='comment'>// OK (type of <span class='texttt'>&amp;D2::i</span> is <span class='texttt'>int B::*</span>)
 </span>  B::j = 5;                     <span class='comment'>// ill-formed (not a friend of naming class <span class='texttt'>B</span>)
