--- a/class.union.anon.html
+++ b/class.union.anon.html
@@ -31,8 +31,8 @@ member functions.</p></div><div class='para' id='3'><div class='marginalizedpare
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 void f() {
   union { int aa; char* p; } obj, *ptr = &amp;obj;
-  aa = 1;                         <span class='comment'>// error
-</span>  ptr-&gt;aa = 1;                    <span class='comment'>// OK
+  aa = 1;           <span class='comment'>// error
+</span>  ptr-&gt;aa = 1;      <span class='comment'>// OK
 </span>}
 </pre><p >The assignment to plain <span class='texttt'>aa</span> is ill-formed since the member name
 is not visible outside the union, and even if it were visible, it is not
@@ -47,7 +47,8 @@ If <span class='texttt'>X</span> is a union, a non-static data member of <span c
 union is a variant member of <span class='texttt'>X</span>. In addition, a non-static data member of an
 anonymous union that is a member of <span class='texttt'>X</span> is also a variant member of <span class='texttt'>X</span>.
 At most one variant member of a union may have a default member initializer.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 union U {
   int x = 0;
   union {
@@ -55,7 +56,7 @@ union U {
   };
   union {
     int z;
-    int y = 1; <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
+    int y = 1;      <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
 </span>  };
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div></body></html>
