--- a/class.union.html
+++ b/class.union.html
@@ -88,21 +88,21 @@ union A { int x; int y[4]; };
 struct B { A a; };
 union C { B b; int k; };
 int f() {
-  C c;               <span class='comment'>// does not start lifetime of any union member
-</span>  c.b.a.y[3] = 4;    <span class='comment'>// OK: <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>c.b.a.y[3]</span><span class='math'>)</span> contains <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>;
-</span>                     <span class='comment'>// creates objects to hold union members <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>
-</span>  return c.b.a.y[3]; <span class='comment'>// OK: <span class='texttt'>c.b.a.y</span> refers to newly created object (see <a href='basic.life'>[basic.life]</a>)
+  C c;                  <span class='comment'>// does not start lifetime of any union member
+</span>  c.b.a.y[3] = 4;       <span class='comment'>// OK: <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>c.b.a.y[3]</span><span class='math'>)</span> contains <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>;
+</span>                        <span class='comment'>// creates objects to hold union members <span class='texttt'>c.b</span> and <span class='texttt'>c.b.a.y</span>
+</span>  return c.b.a.y[3];    <span class='comment'>// OK: <span class='texttt'>c.b.a.y</span> refers to newly created object (see <a href='basic.life'>[basic.life]</a>)
 </span>}
 
 struct X { const int a; int b; };
 union Y { X x; int k; };
 void g() {
-  Y y = { { 1, 2 } }; <span class='comment'>// OK, <span class='texttt'>y.x</span> is active union member (<a href='class.mem'>[class.mem]</a>)
+  Y y = { { 1, 2 } };   <span class='comment'>// OK, <span class='texttt'>y.x</span> is active union member (<a href='class.mem'>[class.mem]</a>)
 </span>  int n = y.x.a;
-  y.k = 4;   <span class='comment'>// OK: ends lifetime of <span class='texttt'>y.x</span>, <span class='texttt'>y.k</span> is active member of union
-</span>  y.x.b = n; <span class='comment'>// undefined behavior: <span class='texttt'>y.x.b</span> modified outside its lifetime,
-</span>             <span class='comment'>// <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>y.x.b</span><span class='math'>)</span> is empty because <span class='texttt'>X</span>'s default constructor is deleted,
-</span>             <span class='comment'>// so union member <span class='texttt'>y.x</span>'s lifetime does not implicitly start
+  y.k = 4;              <span class='comment'>// OK: ends lifetime of <span class='texttt'>y.x</span>, <span class='texttt'>y.k</span> is active member of union
+</span>  y.x.b = n;            <span class='comment'>// undefined behavior: <span class='texttt'>y.x.b</span> modified outside its lifetime,
+</span>                        <span class='comment'>// <span class='math'><span class='mathalpha'>S</span>(</span><span class='texttt'>y.x.b</span><span class='math'>)</span> is empty because <span class='texttt'>X</span>'s default constructor is deleted,
+</span>                        <span class='comment'>// so union member <span class='texttt'>y.x</span>'s lifetime does not implicitly start
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >[&nbsp;<i>Note:</i> In general, one must use explicit destructor calls and placement
 <i ><a href='expr.new#nt:new-expression'>new-expression</a></i> to change the active member of a union. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
@@ -147,8 +147,8 @@ member functions.</p></div><div class='para' id='anon-3'><div class='marginalize
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 void f() {
   union { int aa; char* p; } obj, *ptr = &amp;obj;
-  aa = 1;                         <span class='comment'>// error
-</span>  ptr-&gt;aa = 1;                    <span class='comment'>// OK
+  aa = 1;           <span class='comment'>// error
+</span>  ptr-&gt;aa = 1;      <span class='comment'>// OK
 </span>}
 </pre><p >The assignment to plain <span class='texttt'>aa</span> is ill-formed since the member name
 is not visible outside the union, and even if it were visible, it is not
@@ -163,7 +163,8 @@ If <span class='texttt'>X</span> is a union, a non-static data member of <span c
 union is a variant member of <span class='texttt'>X</span>. In addition, a non-static data member of an
 anonymous union that is a member of <span class='texttt'>X</span> is also a variant member of <span class='texttt'>X</span>.
 At most one variant member of a union may have a default member initializer.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 union U {
   int x = 0;
   union {
@@ -171,7 +172,7 @@ union U {
   };
   union {
     int z;
-    int y = 1; <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
+    int y = 1;      <span class='comment'>// error: initialization for second variant member of <span class='texttt'>U</span>
 </span>  };
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div></div></div></body></html>
