--- a/class.virtual.html
+++ b/class.virtual.html
@@ -234,7 +234,7 @@ suppresses the virtual call mechanism.
 class B { public: virtual void f(); };
 class D : public B { public: void f(); };
 
-void D::f() { <span class='comment'>/* ... */</span> B::f(); }
+void D::f() { <span class='texttt'>/* ... */</span> B::f(); }
 </pre><p >Here, the function call in
 <span class='texttt'>D::f</span>
 really does call
