--- a/dcl.spec.html
+++ b/dcl.spec.html
@@ -106,11 +106,11 @@ can have a different linkage, however.
 <span class='indexparent'><a class='index' id='example,linkage_consistency'></a></span></p><pre class='codeblock'>
 static char* f();               <span class='comment'>// <span class='texttt'>f()</span> has internal linkage
 </span>char* f()                       <span class='comment'>// <span class='texttt'>f()</span> still has internal linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 char* g();                      <span class='comment'>// <span class='texttt'>g()</span> has external linkage
 </span>static char* g()                <span class='comment'>// error: inconsistent linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 void h();
 inline void h();                <span class='comment'>// external linkage
@@ -217,7 +217,7 @@ is the <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> of a <i ><a href
 redefine the name of any type declared in that scope to refer to the
 type to which it already refers.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-typedef struct s { <span class='comment'>/* ... */</span> } s;
+typedef struct s { <span class='texttt'>/* ... */</span> } s;
 typedef int I;
 typedef int I;
 typedef I I;
@@ -1074,7 +1074,7 @@ template&lt;class T&gt; struct container {
 };
 template&lt;class Iter&gt;
 container(Iter b, Iter e) -&gt; container&lt;typename std::iterator_traits&lt;Iter&gt;::value_type&gt;;
-std::vector&lt;double&gt; v = { <span class='comment'>/* ... */</span>};
+std::vector&lt;double&gt; v = { <span class='texttt'>/* ... */</span> };
 
 container c(7);                         <span class='comment'>// OK, deduces <span class='texttt'>int</span> for <span class='texttt'>T</span>
 </span>auto d = container(v.begin(), v.end()); <span class='comment'>// OK, deduces <span class='texttt'>double</span> for <span class='texttt'>T</span>
