--- a/dcl.stc.html
+++ b/dcl.stc.html
@@ -62,11 +62,11 @@ can have a different linkage, however.
 <span class='indexparent'><a class='index' id='example,linkage_consistency'></a></span></p><pre class='codeblock'>
 static char* f();               <span class='comment'>// <span class='texttt'>f()</span> has internal linkage
 </span>char* f()                       <span class='comment'>// <span class='texttt'>f()</span> still has internal linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 char* g();                      <span class='comment'>// <span class='texttt'>g()</span> has external linkage
 </span>static char* g()                <span class='comment'>// error: inconsistent linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 void h();
 inline void h();                <span class='comment'>// external linkage
