--- a/dcl.type.class.deduct.html
+++ b/dcl.type.class.deduct.html
@@ -19,7 +19,7 @@ template&lt;class T&gt; struct container {
 };
 template&lt;class Iter&gt;
 container(Iter b, Iter e) -&gt; container&lt;typename std::iterator_traits&lt;Iter&gt;::value_type&gt;;
-std::vector&lt;double&gt; v = { <span class='comment'>/* ... */</span>};
+std::vector&lt;double&gt; v = { <span class='texttt'>/* ... */</span> };
 
 container c(7);                         <span class='comment'>// OK, deduces <span class='texttt'>int</span> for <span class='texttt'>T</span>
 </span>auto d = container(v.begin(), v.end()); <span class='comment'>// OK, deduces <span class='texttt'>double</span> for <span class='texttt'>T</span>
