--- a/dcl.typedef.html
+++ b/dcl.typedef.html
@@ -47,7 +47,7 @@ is the <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> of a <i ><a href
 redefine the name of any type declared in that scope to refer to the
 type to which it already refers.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-typedef struct s { <span class='comment'>/* ... */</span> } s;
+typedef struct s { <span class='texttt'>/* ... */</span> } s;
 typedef int I;
 typedef int I;
 typedef I I;
