--- a/diff.class.html
+++ b/diff.class.html
@@ -47,7 +47,7 @@ Seldom.</p><p ><a href='class.nest'>[class.nest]</a>
 <br/><b>Change:</b> In C++, the name of a nested class is local to its enclosing class. In C
 the name of the nested class belongs to the same scope as the name of the outermost enclosing class.</p><p >Example:</p><pre class='codeblock'>
 struct X {
-  struct Y { <span class='comment'>/* ... */</span> } y;
+  struct Y { <span class='texttt'>/* ... */</span> } y;
 };
 struct Y yy;                    <span class='comment'>// valid C, invalid C++
 </span></pre><p ><br/><b>Rationale:</b>
@@ -70,7 +70,7 @@ enclosing struct, before the enclosing struct is defined.
 Example:</p><pre class='codeblock'>
 struct Y;                       <span class='comment'>// <span class='texttt'>struct Y</span> and <span class='texttt'>struct X</span> are at the same scope
 </span>struct X {
-  struct Y { <span class='comment'>/* ... */</span> } y;
+  struct Y { <span class='texttt'>/* ... */</span> } y;
 };
 </pre><p >All the definitions of C struct types enclosed in other struct
 definitions and accessed outside the scope of the enclosing
