--- a/diff.dcl.html
+++ b/diff.dcl.html
@@ -72,7 +72,7 @@ equivalent C++ :</p><pre class='codeblock'>
 void f(const parm);            void f(const int parm);
 const n = 3;                   const int n = 3;
 main()                         int main()
-    <span class='comment'>/* ... */</span>                      <span class='comment'>/* ... */</span>
+    <span class='texttt'>/* ... */</span>                      <span class='texttt'>/* ... */</span>
 </pre><p ><br/><b>Rationale:</b>
 In C++, implicit int creates several opportunities for
 ambiguity between expressions involving function-like
