--- a/except.handle.html
+++ b/except.handle.html
@@ -56,10 +56,10 @@ A handler of reference to array or function type
 is never a match for any exception object (<a href='expr.throw'>[expr.throw]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-class Matherr { <span class='comment'>/* ... */</span> virtual void vf(); };
-class Overflow: public Matherr { <span class='comment'>/* ... */</span> };
-class Underflow: public Matherr { <span class='comment'>/* ... */</span> };
-class Zerodivide: public Matherr { <span class='comment'>/* ... */</span> };
+class Matherr { <span class='texttt'>/* ... */</span> virtual void vf(); };
+class Overflow: public Matherr { <span class='texttt'>/* ... */</span> };
+class Underflow: public Matherr { <span class='texttt'>/* ... */</span> };
+class Zerodivide: public Matherr { <span class='texttt'>/* ... */</span> };
 
 void f() {
   try {
