--- a/expr.post.html
+++ b/expr.post.html
@@ -490,7 +490,7 @@ cv-qualified type, the result of the <span class='texttt'>typeid</span> expressi
 to a <span class='texttt'>std::type_info</span> object representing the cv-unqualified
 type.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-class D <span class='texttt'>{ /* ... */ }</span>;
+class D { <span class='texttt'>/* ... */</span> };
 D d1;
 const D d2;
 
