--- a/namespace.alias.html
+++ b/namespace.alias.html
@@ -16,7 +16,7 @@ declarative region to refer only to the namespace to which it already
 refers.
 [&nbsp;<i>Example:</i>
 the following declarations are well-formed:</p><pre class='codeblock'>
-namespace Company_with_very_long_name { <span class='comment'>/* ... */</span> }
+namespace Company_with_very_long_name { <span class='texttt'>/* ... */</span> }
 namespace CWVLN = Company_with_very_long_name;
 namespace CWVLN = Company_with_very_long_name;  <span class='comment'>// OK: duplicate
 </span>namespace CWVLN = CWVLN;
