--- a/namespace.def.html
+++ b/namespace.def.html
@@ -153,7 +153,7 @@ if the primary template is declared in an inline namespace.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace X {
-  void f() { <span class='comment'>/* ... */</span> }        <span class='comment'>// OK: introduces <span class='texttt'>X::f()</span>
+  void f() { <span class='texttt'>/* ... */</span> }        <span class='comment'>// OK: introduces <span class='texttt'>X::f()</span>
 </span>
   namespace M {
     void g();                   <span class='comment'>// OK: introduces <span class='texttt'>X::M::g()</span>
@@ -173,15 +173,15 @@ namespace Q {
   namespace V {
     void f();
   }
-  void V::f() { <span class='comment'>/* ... */</span> }     <span class='comment'>// OK
-</span>  void V::g() { <span class='comment'>/* ... */</span> }     <span class='comment'>// error: <span class='texttt'>g()</span> is not yet a member of <span class='texttt'>V</span>
+  void V::f() { <span class='texttt'>/* ... */</span> }     <span class='comment'>// OK
+</span>  void V::g() { <span class='texttt'>/* ... */</span> }     <span class='comment'>// error: <span class='texttt'>g()</span> is not yet a member of <span class='texttt'>V</span>
 </span>  namespace V {
     void g();
   }
 }
 
 namespace R {
-  void Q::V::g() { <span class='comment'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>R</span> doesn't enclose <span class='texttt'>Q</span>
+  void Q::V::g() { <span class='texttt'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>R</span> doesn't enclose <span class='texttt'>Q</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='namespace.memdef-3'><div class='marginalizedparent'><a class='marginalized' href='#namespace.memdef-3'>3</a></div><p >If a <span class='texttt'>friend</span> declaration in a non-local class first declares a
 class, function, class template or function template<a class='footnotenum' href='#footnote-97'>97</a>
@@ -222,8 +222,8 @@ namespace A {
   <span class='comment'>// <span class='texttt'>A::f</span>, <span class='texttt'>A::g</span> and <span class='texttt'>A::h</span> are not visible here
 </span>  X x;
   void g() { f(x); }            <span class='comment'>// definition of <span class='texttt'>A::g</span>
-</span>  void f(X) <span class='texttt'>{ /* ... */}</span>       <span class='comment'>// definition of <span class='texttt'>A::f</span>
-</span>  void h(int) <span class='texttt'>{ /* ... */ }</span>    <span class='comment'>// definition of <span class='texttt'>A::h</span>
+</span>  void f(X) { <span class='texttt'>/* ... */</span> }       <span class='comment'>// definition of <span class='texttt'>A::f</span>
+</span>  void h(int) { <span class='texttt'>/* ... */</span> }     <span class='comment'>// definition of <span class='texttt'>A::h</span>
 </span>  <span class='comment'>// <span class='texttt'>A::f</span>, <span class='texttt'>A::g</span> and <span class='texttt'>A::h</span> are visible here and known to be friends
 </span>}
 
