--- a/temp.arg.nontype.html
+++ b/temp.arg.nontype.html
@@ -27,27 +27,27 @@ represents a set of overloaded functions
 the matching function is selected from the set (<a href='over.over'>[over.over]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template&lt;const int* pci&gt; struct X { <span class='comment'>/* ... */</span> };
+template&lt;const int* pci&gt; struct X { <span class='texttt'>/* ... */</span> };
 int ai[10];
 X&lt;ai&gt; xi;                       <span class='comment'>// array to pointer and qualification conversions
 </span>
-struct Y { <span class='comment'>/* ... */</span> };
-template&lt;const Y&amp; b&gt; struct Z { <span class='comment'>/* ... */</span> };
+struct Y { <span class='texttt'>/* ... */</span> };
+template&lt;const Y&amp; b&gt; struct Z { <span class='texttt'>/* ... */</span> };
 Y y;
 Z&lt;y&gt; z;                         <span class='comment'>// no conversion, but note extra cv-qualification
 </span>
-template&lt;int (&amp;pa)[5]&gt; struct W { <span class='comment'>/* ... */</span> };
+template&lt;int (&amp;pa)[5]&gt; struct W { <span class='texttt'>/* ... */</span> };
 int b[5];
 W&lt;b&gt; w;                         <span class='comment'>// no conversion
 </span>
 void f(char);
 void f(int);
 
-template&lt;void (*pf)(int)&gt; struct A { <span class='comment'>/* ... */</span> };
+template&lt;void (*pf)(int)&gt; struct A { <span class='texttt'>/* ... */</span> };
 
 A&lt;&amp;f&gt; a;                        <span class='comment'>// selects <span class='texttt'>f(int)</span>
 </span>
-template&lt;auto n&gt; struct B { <span class='comment'>/* ... */</span> };
+template&lt;auto n&gt; struct B { <span class='texttt'>/* ... */</span> };
 B&lt;5&gt; b1;   <span class='comment'>// OK: template parameter type is <span class='texttt'>int</span>
 </span>B&lt;'a'&gt; b2; <span class='comment'>// OK: template parameter type is <span class='texttt'>char</span>
 </span>B&lt;2.5&gt; b3; <span class='comment'>// error: template parameter type cannot be <span class='texttt'>double</span>
@@ -57,7 +57,7 @@ is not an acceptable
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T, const char* p&gt; class X {
-  <span class='comment'>/* ... */</span>
+  <span class='texttt'>/* ... */</span>
 };
 
 X&lt;int, "Studebaker"&gt; x1;        <span class='comment'>// error: string literal as template-argument
@@ -87,7 +87,7 @@ when the corresponding
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 has reference type.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;const int&amp; CRI&gt; struct B { <span class='comment'>/* ... */</span> };
+template&lt;const int&amp; CRI&gt; struct B { <span class='texttt'>/* ... */</span> };
 
 B&lt;1&gt; b2;                        <span class='comment'>// error: temporary would be required for template argument
 </span>
