--- a/temp.arg.template.html
+++ b/temp.arg.template.html
@@ -48,13 +48,13 @@ parameters or template parameter packs in the <i ><a href='temp#nt:template-para
 <span class='texttt'>A</span> with the same type and form as the template parameter pack in <span class='texttt'>P</span>
 (ignoring whether those template parameters are template parameter packs).</p><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template&lt;class T&gt; class A { <span class='comment'>/* ... */</span> };
-template&lt;class T, class U = T&gt; class B { <span class='comment'>/* ... */</span> };
-template&lt;class ... Types&gt; class C { <span class='comment'>/* ... */</span> };
-template&lt;auto n&gt; class D { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;class&gt; class P&gt; class X { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;class ...&gt; class Q&gt; class Y { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;int&gt; class R&gt; class Z { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class A { <span class='texttt'>/* ... */</span> };
+template&lt;class T, class U = T&gt; class B { <span class='texttt'>/* ... */</span> };
+template&lt;class ... Types&gt; class C { <span class='texttt'>/* ... */</span> };
+template&lt;auto n&gt; class D { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;class&gt; class P&gt; class X { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;class ...&gt; class Q&gt; class Y { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;int&gt; class R&gt; class Z { <span class='texttt'>/* ... */</span> };
 
 X&lt;A&gt; xa;            <span class='comment'>// OK
 </span>X&lt;B&gt; xb;            <span class='comment'>// OK
