--- a/temp.decls.html
+++ b/temp.decls.html
@@ -187,7 +187,7 @@ of the member template.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T&gt; struct string {
   template&lt;class T2&gt; int compare(const T2&amp;);
-  template&lt;class T2&gt; string(const string&lt;T2&gt;&amp; s) { <span class='comment'>/* ... */</span> }
+  template&lt;class T2&gt; string(const string&lt;T2&gt;&amp; s) { <span class='texttt'>/* ... */</span> }
 };
 
 template&lt;class T&gt; template&lt;class T2&gt; int string&lt;T&gt;::compare(const T2&amp; s) {
@@ -521,16 +521,18 @@ template, but a friend class template may not be defined in a class
 or class template.
 In these cases, all specializations of the friend class or friend function
 template are friends of the class or class template granting friendship.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class A {
   template&lt;class T&gt; friend class B;                 <span class='comment'>// OK
-</span>  template&lt;class T&gt; friend void f(T)<span class='texttt'>{ /* ... */ }</span>  <span class='comment'>// OK
+</span>  template&lt;class T&gt; friend void f(T){ <span class='texttt'>/* ... */</span> }   <span class='comment'>// OK
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='temp.friend-3'><div class='marginalizedparent'><a class='marginalized' href='#temp.friend-3'>3</a></div><p >A template friend declaration specifies that all specializations of that
 template, whether they are implicitly instantiated (<a href='temp.inst'>[temp.inst]</a>), partially
 specialized (<a href='temp.class.spec'>[temp.class.spec]</a>) or explicitly specialized (<a href='temp.expl.spec'>[temp.expl.spec]</a>),
 are friends of the class containing the template friend declaration.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class X {
   template&lt;class T&gt; friend struct A;
   class Y { };
@@ -1141,17 +1143,17 @@ substitution of its <i ><a href='temp.names#nt:template-argument'>template-argum
 the alias template.
 [&nbsp;<i>Note:</i> An alias template name is never deduced.<i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class T&gt; struct Alloc { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; struct Alloc { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; using Vec = vector&lt;T, Alloc&lt;T&gt;&gt;;
 Vec&lt;int&gt; v;         <span class='comment'>// same as <span class='texttt'>vector&lt;int, Alloc&lt;int&gt;&gt; v;</span>
 </span>
 template&lt;class T&gt;
   void process(Vec&lt;T&gt;&amp; v)
-  { <span class='comment'>/* ... */</span> }
+  { <span class='texttt'>/* ... */</span> }
 
 template&lt;class T&gt;
   void process(vector&lt;T, Alloc&lt;T&gt;&gt;&amp; w)
-  { <span class='comment'>/* ... */</span> }     <span class='comment'>// error: redefinition
+  { <span class='texttt'>/* ... */</span> }     <span class='comment'>// error: redefinition
 </span>
 template&lt;template&lt;class&gt; class TT&gt;
   void f(TT&lt;int&gt;);
