--- a/temp.deduct.type.html
+++ b/temp.deduct.type.html
@@ -128,9 +128,9 @@ is deduced.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >[&nbsp;<i>Example:</i>
 Here is an example in which different parameter/argument pairs produce
 inconsistent template argument deductions:</p><pre class='codeblock'>
-template&lt;class T&gt; void f(T x, T y) { <span class='comment'>/* ... */</span> }
-struct A { <span class='comment'>/* ... */</span> };
-struct B : A { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; void f(T x, T y) { <span class='texttt'>/* ... */</span> }
+struct A { <span class='texttt'>/* ... */</span> };
+struct B : A { <span class='texttt'>/* ... */</span> };
 void g(A a, B b) {
   f(a,b);           <span class='comment'>// error: <span class='texttt'>T</span> could be <span class='texttt'>A</span> or <span class='texttt'>B</span>
 </span>  f(b,a);           <span class='comment'>// error: <span class='texttt'>T</span> could be <span class='texttt'>A</span> or <span class='texttt'>B</span>
@@ -373,7 +373,7 @@ is used in a subexpression in the function parameter list,
 the expression is a non-deduced context as specified above.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template &lt;int i&gt; class A { <span class='comment'>/* ... */</span> };
+template &lt;int i&gt; class A { <span class='texttt'>/* ... */</span> };
 template &lt;int i&gt; void g(A&lt;i+1&gt;);
 template &lt;int i&gt; void f(A&lt;i&gt;, A&lt;i+1&gt;);
 void k() {
@@ -409,7 +409,7 @@ deduction fails.
 If <span class='texttt'>P</span> has a form that contains <span class='texttt'>[i]</span>, and if the type of
 <span class='texttt'>i</span> is not an integral type, deduction fails.<a class='footnotenum' href='#footnote-143'>143</a>
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;int i&gt; class A { <span class='comment'>/* ... */</span> };
+template&lt;int i&gt; class A { <span class='texttt'>/* ... */</span> };
 template&lt;short s&gt; void f(A&lt;s&gt;);
 void k1() {
   A&lt;1&gt; a;
