--- a/temp.dep.html
+++ b/temp.dep.html
@@ -80,7 +80,7 @@ defined in the base class
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 struct A {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   int a;
   int Y;
 };
@@ -88,7 +88,7 @@ struct A {
 int a;
 
 template&lt;class T&gt; struct Y : T {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   B b;                          <span class='comment'>// The <span class='texttt'>B</span> defined in <span class='texttt'>Y</span>
 </span>  void f(int i) { a = i; }      <span class='comment'>// <span class='texttt'>::a</span>
 </span>  Y* p;                         <span class='comment'>// <span class='texttt'>Y&lt;T&gt;</span>
