--- a/temp.expl.spec.html
+++ b/temp.expl.spec.html
@@ -16,10 +16,10 @@ that is:
 </p><pre class='codeblock'>
 template&lt;class T&gt; class stream;
 
-template&lt;&gt; class stream&lt;char&gt; { <span class='comment'>/* ... */</span> };
+template&lt;&gt; class stream&lt;char&gt; { <span class='texttt'>/* ... */</span> };
 
-template&lt;class T&gt; class Array { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='comment'>/* ... */</span> }
+template&lt;class T&gt; class Array { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='texttt'>/* ... */</span> }
 
 template&lt;&gt; void sort&lt;char*&gt;(Array&lt;char*&gt;&amp;);
 </pre><p >Given these declarations,
@@ -54,11 +54,11 @@ The definition of a class or class template shall precede the
 declaration of an explicit specialization for a member template of the class
 or class template.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;&gt; class X&lt;int&gt; { <span class='comment'>/* ... */</span> };          <span class='comment'>// error: <span class='texttt'>X</span> not a template
+template&lt;&gt; class X&lt;int&gt; { <span class='texttt'>/* ... */</span> };          <span class='comment'>// error: <span class='texttt'>X</span> not a template
 </span>
 template&lt;class T&gt; class X;
 
-template&lt;&gt; class X&lt;char*&gt; { <span class='comment'>/* ... */</span> };        <span class='comment'>// OK: <span class='texttt'>X</span> is a template
+template&lt;&gt; class X&lt;char*&gt; { <span class='texttt'>/* ... */</span> };        <span class='comment'>// OK: <span class='texttt'>X</span> is a template
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >A member function, a member function template, a member class,
 a member enumeration, a
 member class template,
@@ -104,14 +104,14 @@ void h() {
 
 <span class='comment'>// <span class='texttt'>template&lt;&gt;</span> not used for a member of an
 </span><span class='comment'>// explicitly specialized class template
-</span>void A&lt;int&gt;::f(int) { <span class='comment'>/* ... */</span> }
+</span>void A&lt;int&gt;::f(int) { <span class='texttt'>/* ... */</span> }
 
 template&lt;&gt; struct A&lt;char&gt;::B {
   void f();
 };
 <span class='comment'>// <span class='texttt'>template&lt;&gt;</span> also not used when defining a member of
 </span><span class='comment'>// an explicitly specialized member class
-</span>void A&lt;char&gt;::B::f() { <span class='comment'>/* ... */</span> }
+</span>void A&lt;char&gt;::B::f() { <span class='texttt'>/* ... */</span> }
 
 template&lt;&gt; template&lt;class U&gt; struct A&lt;char&gt;::C {
   void f();
@@ -119,17 +119,17 @@ template&lt;&gt; template&lt;class U&gt; struct A&lt;char&gt;::C {
 <span class='comment'>// <span class='texttt'>template&lt;&gt;</span> is used when defining a member of an explicitly
 </span><span class='comment'>// specialized member class template specialized as a class template
 </span>template&lt;&gt;
-template&lt;class U&gt; void A&lt;char&gt;::C&lt;U&gt;::f() { <span class='comment'>/* ... */</span> }
+template&lt;class U&gt; void A&lt;char&gt;::C&lt;U&gt;::f() { <span class='texttt'>/* ... */</span> }
 
 template&lt;&gt; struct A&lt;short&gt;::B {
   void f();
 };
-template&lt;&gt; void A&lt;short&gt;::B::f() { <span class='comment'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>template&lt;&gt;</span> not permitted
+template&lt;&gt; void A&lt;short&gt;::B::f() { <span class='texttt'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>template&lt;&gt;</span> not permitted
 </span>
 template&lt;&gt; template&lt;class U&gt; struct A&lt;short&gt;::C {
   void f();
 };
-template&lt;class U&gt; void A&lt;short&gt;::C&lt;U&gt;::f() { <span class='comment'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>template&lt;&gt;</span> required
+template&lt;class U&gt; void A&lt;short&gt;::C&lt;U&gt;::f() { <span class='texttt'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>template&lt;&gt;</span> required
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If a template, a member template or a member of a class template is explicitly
 specialized then that specialization shall be declared before the first use of
 that specialization that would cause an implicit instantiation to take place,
@@ -143,8 +143,8 @@ An implicit instantiation is never generated for an explicit specialization
 that is declared but not defined.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 class String { };
-template&lt;class T&gt; class Array { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='comment'>/* ... */</span> }
+template&lt;class T&gt; class Array { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='texttt'>/* ... */</span> }
 
 void f(Array&lt;String&gt;&amp; v) {
   sort(v);          <span class='comment'>// use primary template
@@ -190,18 +190,18 @@ or to make it compile will be such a trial as to kindle its self-immolation.</p>
 the template was defined.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 namespace N {
-  template&lt;class T&gt; class X { <span class='comment'>/* ... */</span> };
-  template&lt;class T&gt; class Y { <span class='comment'>/* ... */</span> };
+  template&lt;class T&gt; class X { <span class='texttt'>/* ... */</span> };
+  template&lt;class T&gt; class Y { <span class='texttt'>/* ... */</span> };
 
-  template&lt;&gt; class X&lt;int&gt; { <span class='comment'>/* ... */</span> };          <span class='comment'>// OK: specialization
+  template&lt;&gt; class X&lt;int&gt; { <span class='texttt'>/* ... */</span> };          <span class='comment'>// OK: specialization
 </span>                                                <span class='comment'>// in same namespace
 </span>  template&lt;&gt; class Y&lt;double&gt;;                   <span class='comment'>// forward declare intent to
 </span>                                                <span class='comment'>// specialize for <span class='texttt'>double</span>
 </span>}
 
-template&lt;&gt; class N::Y&lt;double&gt; { <span class='comment'>/* ... */</span> };      <span class='comment'>// OK: specialization
+template&lt;&gt; class N::Y&lt;double&gt; { <span class='texttt'>/* ... */</span> };      <span class='comment'>// OK: specialization
 </span>                                                <span class='comment'>// in enclosing namespace
-</span>template&lt;&gt; class N::Y&lt;short&gt; { <span class='comment'>/* ... */</span> };       <span class='comment'>// OK: specialization
+</span>template&lt;&gt; class N::Y&lt;short&gt; { <span class='texttt'>/* ... */</span> };       <span class='comment'>// OK: specialization
 </span>                                                <span class='comment'>// in enclosing namespace
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><p >A
 <i ><a href='temp.names#nt:simple-template-id'>simple-template-id</a></i>
@@ -221,7 +221,7 @@ can be left unspecified in the
 naming an explicit function template specialization
 provided it can be deduced from the function argument type.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class T&gt; class Array { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class Array { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v);
 
 <span class='comment'>// explicit specialization for <span class='texttt'>sort(Array&lt;int&gt;&amp;)</span>
@@ -233,11 +233,11 @@ only if it is declared with the <span class='texttt'>inline</span>
 specifier or defined as deleted, and independently of whether its
 function or variable template is inline.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class T&gt; void f(T) { <span class='comment'>/* ... */</span> }
-template&lt;class T&gt; inline T g(T) { <span class='comment'>/* ... */</span> }
+template&lt;class T&gt; void f(T) { <span class='texttt'>/* ... */</span> }
+template&lt;class T&gt; inline T g(T) { <span class='texttt'>/* ... */</span> }
 
-template&lt;&gt; inline void f&lt;&gt;(int) { <span class='comment'>/* ... */</span> }   <span class='comment'>// OK: inline
-</span>template&lt;&gt; int g&lt;&gt;(int) { <span class='comment'>/* ... */</span> }           <span class='comment'>// OK: not inline
+template&lt;&gt; inline void f&lt;&gt;(int) { <span class='texttt'>/* ... */</span> }   <span class='comment'>// OK: inline
+</span>template&lt;&gt; int g&lt;&gt;(int) { <span class='texttt'>/* ... */</span> }           <span class='comment'>// OK: not inline
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><p >An explicit specialization of a static data member of a template
 or an explicit specialization of a static data member template is a
 definition if the declaration includes an initializer;
