--- a/temp.explicit.html
+++ b/temp.explicit.html
@@ -52,7 +52,7 @@ template&lt;class T&gt; class Array { void mf(); };
 template class Array&lt;char&gt;;
 template void Array&lt;int&gt;::mf();
 
-template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='comment'>/* ... */</span> }
+template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='texttt'>/* ... */</span> }
 template void sort(Array&lt;char&gt;&amp;);       <span class='comment'>// argument is deduced here
 </span>
 namespace N {
@@ -106,8 +106,8 @@ can be left unspecified in an explicit instantiation of a function template
 specialization or of a member function template specialization provided
 it can be deduced from the type of a function parameter (<a href='temp.deduct'>[temp.deduct]</a>).
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class T&gt; class Array { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='comment'>/* ... */</span> }
+template&lt;class T&gt; class Array { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; void sort(Array&lt;T&gt;&amp; v) { <span class='texttt'>/* ... */</span> }
 
 <span class='comment'>// instantiate <span class='texttt'>sort(Array&lt;int&gt;&amp;)</span> - template-argument deduced
 </span>template void sort&lt;&gt;(Array&lt;int&gt;&amp;);
