--- a/temp.friend.html
+++ b/temp.friend.html
@@ -73,16 +73,18 @@ template, but a friend class template may not be defined in a class
 or class template.
 In these cases, all specializations of the friend class or friend function
 template are friends of the class or class template granting friendship.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class A {
   template&lt;class T&gt; friend class B;                 <span class='comment'>// OK
-</span>  template&lt;class T&gt; friend void f(T)<span class='texttt'>{ /* ... */ }</span>  <span class='comment'>// OK
+</span>  template&lt;class T&gt; friend void f(T){ <span class='texttt'>/* ... */</span> }   <span class='comment'>// OK
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >A template friend declaration specifies that all specializations of that
 template, whether they are implicitly instantiated (<a href='temp.inst'>[temp.inst]</a>), partially
 specialized (<a href='temp.class.spec'>[temp.class.spec]</a>) or explicitly specialized (<a href='temp.expl.spec'>[temp.expl.spec]</a>),
 are friends of the class containing the template friend declaration.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class X {
   template&lt;class T&gt; friend struct A;
   class Y { };
