--- a/temp.inst.html
+++ b/temp.inst.html
@@ -15,8 +15,8 @@ inheritance relationship between the two classes involved.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template&lt;class T&gt; class B { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; class D : public B&lt;T&gt; { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class B { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; class D : public B&lt;T&gt; { <span class='texttt'>/* ... */</span> };
 
 void f(void*);
 void f(B&lt;int&gt;*);
