--- a/temp.local.html
+++ b/temp.local.html
@@ -97,7 +97,7 @@ of any enclosing class templates (but not a <i ><a href='temp.param#nt:template-
 member if the member is a class or function template).
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T&gt; struct A {
-  struct B <span class='texttt'>{ /* ... */ };</span>
+  struct B { <span class='texttt'>/* ... */</span> };
   typedef void C;
   void f();
   template&lt;class U&gt; void g(U);
@@ -138,7 +138,7 @@ the base class name or member name hides the
 name (<a href='basic.scope.hiding'>[basic.scope.hiding]</a>).
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 struct A {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   int a;
   int Y;
 };
