--- a/temp.mem.html
+++ b/temp.mem.html
@@ -11,7 +11,7 @@ of the member template.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T&gt; struct string {
   template&lt;class T2&gt; int compare(const T2&amp;);
-  template&lt;class T2&gt; string(const string&lt;T2&gt;&amp; s) { <span class='comment'>/* ... */</span> }
+  template&lt;class T2&gt; string(const string&lt;T2&gt;&amp; s) { <span class='texttt'>/* ... */</span> }
 };
 
 template&lt;class T&gt; template&lt;class T2&gt; int string&lt;T&gt;::compare(const T2&amp; s) {
