--- a/temp.names.html
+++ b/temp.names.html
@@ -41,12 +41,12 @@ token produced by this replacement rule may terminate an enclosing
 <span class='rmfamily'></span><i> template-id</i> construct or it may be part of a different
 construct (e.g. a cast).<i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;int i&gt; class X <span class='texttt'>{ /* ... */ };</span>
+template&lt;int i&gt; class X { <span class='texttt'>/* ... */</span> };
 
 X&lt; 1&gt;2 &gt; x1;                        <span class='comment'>// syntax error
 </span>X&lt;(1&gt;2)&gt; x2;                        <span class='comment'>// OK
 </span>
-template&lt;class T&gt; class Y <span class='texttt'>{ /* ... */ };</span>
+template&lt;class T&gt; class Y { <span class='texttt'>/* ... */</span> };
 Y&lt;X&lt;1&gt;&gt; x3;                         <span class='comment'>// OK, same as <span class='texttt'>Y&lt;X&lt;1&gt; &gt; x3;</span>
 </span>Y&lt;X&lt;6&gt;&gt;1&gt;&gt; x4;                      <span class='comment'>// syntax error
 </span>Y&lt;X&lt;(6&gt;&gt;1)&gt;&gt; x5;                    <span class='comment'>// OK
