--- a/temp.over.html
+++ b/temp.over.html
@@ -44,8 +44,8 @@ for
 <span class='texttt'>c</span>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Here is an example involving conversions on a function argument involved in
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 deduction:</p><pre class='codeblock'>
-template&lt;class T&gt; struct B { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; struct D : public B&lt;T&gt; { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; struct B { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; struct D : public B&lt;T&gt; { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; void f(B&lt;T&gt;&amp;);
 
 void g(B&lt;int&gt;&amp; bi, D&lt;int&gt;&amp; di) {
