--- a/temp.param.html
+++ b/temp.param.html
@@ -32,7 +32,7 @@ A <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i> of t
 <span class='texttt'>class</span> <i ><a href='lex.name#nt:identifier'>identifier</a></i> is a <i ><a href='temp.param#nt:type-parameter'>type-parameter</a></i>.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-  class T { <span class='comment'>/* ... */</span> };
+  class T { <span class='texttt'>/* ... */</span> };
   int i;
 
   template&lt;class T, T i&gt; void f(T t) {
@@ -64,7 +64,7 @@ in the scope of the template declaration.
 [&nbsp;<i>Note:</i>
 A template argument may be a class template or alias template.
 For example,</p><pre class='codeblock'>
-template&lt;class T&gt; class myarray { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class myarray { <span class='texttt'>/* ... */</span> };
 
 template&lt;class K, class V, template&lt;class T&gt; class C = myarray&gt;
 class Map {
@@ -118,8 +118,8 @@ template&lt;double d&gt; class X;     <span class='comment'>// error
 <span class='indexparent'><a class='index' id='function,template_parameter_of_type'></a></span>of function type <span class='texttt'>T</span>
 is adjusted to be of type “pointer to <span class='texttt'>T</span>”.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;int* a&gt;   struct R { <span class='comment'>/* ... */</span> };
-template&lt;int b[5]&gt; struct S { <span class='comment'>/* ... */</span> };
+template&lt;int* a&gt;   struct R { <span class='texttt'>/* ... */</span> };
+template&lt;int b[5]&gt; struct S { <span class='texttt'>/* ... */</span> };
 int p;
 R&lt;&amp;p&gt; w;                        <span class='comment'>// OK
 </span>S&lt;&amp;p&gt; x;                        <span class='comment'>// OK due to parameter adjustment
@@ -213,10 +213,10 @@ is taken as the end of the
 rather than a greater-than operator.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;int i = 3 &gt; 4 &gt;        <span class='comment'>// syntax error
-</span>class X { <span class='comment'>/* ... */</span> };
+</span>class X { <span class='texttt'>/* ... */</span> };
 
 template&lt;int i = (3 &gt; 4) &gt;      <span class='comment'>// OK
-</span>class Y { <span class='comment'>/* ... */</span> };
+</span>class Y { <span class='texttt'>/* ... */</span> };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><p >A
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 of a template
