--- a/temp.res.html
+++ b/temp.res.html
@@ -383,7 +383,7 @@ of any enclosing class templates (but not a <i ><a href='temp.param#nt:template-
 member if the member is a class or function template).
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T&gt; struct A {
-  struct B <span class='texttt'>{ /* ... */ };</span>
+  struct B { <span class='texttt'>/* ... */</span> };
   typedef void C;
   void f();
   template&lt;class U&gt; void g(U);
@@ -424,7 +424,7 @@ the base class name or member name hides the
 name (<a href='basic.scope.hiding'>[basic.scope.hiding]</a>).
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 struct A {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   int a;
   int Y;
 };
@@ -515,7 +515,7 @@ defined in the base class
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 struct A {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   int a;
   int Y;
 };
@@ -523,7 +523,7 @@ struct A {
 int a;
 
 template&lt;class T&gt; struct Y : T {
-  struct B { <span class='comment'>/* ... */</span> };
+  struct B { <span class='texttt'>/* ... */</span> };
   B b;                          <span class='comment'>// The <span class='texttt'>B</span> defined in <span class='texttt'>Y</span>
 </span>  void f(int i) { a = i; }      <span class='comment'>// <span class='texttt'>::a</span>
 </span>  Y* p;                         <span class='comment'>// <span class='texttt'>Y&lt;T&gt;</span>
