--- a/temp.type.html
+++ b/temp.type.html
@@ -19,7 +19,7 @@ reference type refer to the same object or function and
 </p></li><li id='1.7'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#1.7'>(1.7)</a></div><p >their corresponding template <i ><a href='temp.names#nt:template-argument'>template-arguments</a></i> refer
 to the same template.
 </p></li></ul><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class E, int size&gt; class buffer { <span class='comment'>/* ... */</span> };
+template&lt;class E, int size&gt; class buffer { <span class='texttt'>/* ... */</span> };
 buffer&lt;char,2*512&gt; x;
 buffer&lt;char,1024&gt; y;
 </pre><p >declares
@@ -27,7 +27,7 @@ buffer&lt;char,1024&gt; y;
 and
 <span class='texttt'>y</span>
 to be of the same type, and</p><pre class='codeblock'>
-template&lt;class T, void(*err_fct)()&gt; class list { <span class='comment'>/* ... */</span> };
+template&lt;class T, void(*err_fct)()&gt; class list { <span class='texttt'>/* ... */</span> };
 list&lt;int,&amp;error_handler1&gt; x1;
 list&lt;int,&amp;error_handler2&gt; x2;
 list&lt;int,&amp;error_handler2&gt; x3;
