--- a/class.access.html
+++ b/class.access.html
@@ -134,7 +134,7 @@ protected:
 template &lt;class U, class V = typename U::TT&gt;
 class D : public U { };
 
-D &lt;C&lt;B&gt; &gt;* d;       <span class='comment'>// access error, C::TT is protected
+D &lt;C&lt;B&gt; &gt;* d;       <span class='comment'>// access error, <span class='texttt'>C::TT</span> is protected
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-113'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-113'>113)</a></div><p >Access
 permissions are thus transitive and cumulative to nested
 and local classes.</p></div><div id='spec'><h2 ><a class='secnum' href='#spec' style='min-width:88pt'>11.1</a> Access specifiers <a class='abbr_ref' href='class.access.spec'>[class.access.spec]</a></h2><p ><span class='indexparent'><a class='index' id='access_specifier'></a></span></p><div class='para' id='spec-1'><div class='marginalizedparent'><a class='marginalized' href='#spec-1'>1</a></div><p >Member declarations can be labeled by an
@@ -229,15 +229,15 @@ is assumed when the class is
 defined with the <i ><a href='class#nt:class-key'>class-key</a></i>
 <span class='texttt'>class</span>.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-class B { <span class='comment'>/* ... */</span> };
-class D1 : private B { <span class='comment'>/* ... */</span> };
-class D2 : public B { <span class='comment'>/* ... */</span> };
-class D3 : B { <span class='comment'>/* ... */</span> };     <span class='comment'>// <span class='texttt'>B</span> private by default
-</span>struct D4 : public B { <span class='comment'>/* ... */</span> };
-struct D5 : private B { <span class='comment'>/* ... */</span> };
-struct D6 : B { <span class='comment'>/* ... */</span> };    <span class='comment'>// <span class='texttt'>B</span> public by default
-</span>class D7 : protected B { <span class='comment'>/* ... */</span> };
-struct D8 : protected B { <span class='comment'>/* ... */</span> };
+class B { <span class='texttt'>/* ... */</span> };
+class D1 : private B { <span class='texttt'>/* ... */</span> };
+class D2 : public B { <span class='texttt'>/* ... */</span> };
+class D3 : B { <span class='texttt'>/* ... */</span> };             <span class='comment'>// <span class='texttt'>B</span> private by default
+</span>struct D4 : public B { <span class='texttt'>/* ... */</span> };
+struct D5 : private B { <span class='texttt'>/* ... */</span> };
+struct D6 : B { <span class='texttt'>/* ... */</span> };            <span class='comment'>// <span class='texttt'>B</span> public by default
+</span>class D7 : protected B { <span class='texttt'>/* ... */</span> };
+struct D8 : protected B { <span class='texttt'>/* ... */</span> };
 </pre><p >Here
 <span class='texttt'>B</span>
 is a public base of
@@ -339,9 +339,8 @@ class S: private B {
 
 class N: private S {
   void f() {
-    B* p = this;    <span class='comment'>// OK because class <span class='texttt'>S</span> satisfies the fourth condition
-</span>                    <span class='comment'>// above: <span class='texttt'>B</span> is a base class of <span class='texttt'>N</span> accessible in <span class='texttt'>f()</span> because
-</span>                    <span class='comment'>// <span class='texttt'>B</span> is an accessible base class of <span class='texttt'>S</span> and <span class='texttt'>S</span> is an accessible
+    B* p = this;    <span class='comment'>// OK because class <span class='texttt'>S</span> satisfies the fourth condition above: <span class='texttt'>B</span> is a base class of <span class='texttt'>N</span>
+</span>                    <span class='comment'>// accessible in <span class='texttt'>f()</span> because <span class='texttt'>B</span> is an accessible base class of <span class='texttt'>S</span> and <span class='texttt'>S</span> is an accessible
 </span>                    <span class='comment'>// base class of <span class='texttt'>N</span>.
 </span>  }
 };
@@ -434,8 +433,7 @@ private:
 };
 class B : public A { };
 void f(B* p) {
-  p-&gt;i = 1;         <span class='comment'>// OK: <span class='texttt'>B*</span> can be implicitly converted to <span class='texttt'>A*</span>,
-</span>                    <span class='comment'>// and <span class='texttt'>f</span> has access to <span class='texttt'>i</span> in <span class='texttt'>A</span>
+  p-&gt;i = 1;         <span class='comment'>// OK: <span class='texttt'>B*</span> can be implicitly converted to <span class='texttt'>A*</span>, and <span class='texttt'>f</span> has access to <span class='texttt'>i</span> in <span class='texttt'>A</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></li></ul></div><div class='para' id='base-6'><div class='marginalizedparent'><a class='marginalized' href='#base-6'>6</a></div><p >If a class member access operator, including an implicit
@@ -487,10 +485,10 @@ class A {
   friend class X;
 };
 
-struct X : A::B {   <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to friend
-</span>  A::B mx;          <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to member of friend
+struct X : A::B {               <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to friend
+</span>  A::B mx;                      <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to member of friend
 </span>  class Y {
-    A::B my;        <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to nested member of friend
+    A::B my;                    <span class='comment'>// OK: <span class='texttt'>A::B</span> accessible to nested member of friend
 </span>  };
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
@@ -501,16 +499,16 @@ class X {
 };
 
 class Y {
-  int v[X::a];      <span class='comment'>// OK, <span class='texttt'>Y</span> is a friend of <span class='texttt'>X</span>
+  int v[X::a];                  <span class='comment'>// OK, <span class='texttt'>Y</span> is a friend of <span class='texttt'>X</span>
 </span>};
 
 class Z {
-  int v[X::a];      <span class='comment'>// error: <span class='texttt'>X::a</span> is private
+  int v[X::a];                  <span class='comment'>// error: <span class='texttt'>X::a</span> is private
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p >A class shall not be defined in a friend declaration. [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 class A {
-  friend class B { }; <span class='comment'>// error: cannot define class in friend declaration
+  friend class B { };           <span class='comment'>// error: cannot define class in friend declaration
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.friend-3'><div class='marginalizedparent'><a class='marginalized' href='#class.friend-3'>3</a></div><p >A <span class='texttt'>friend</span> declaration that does not declare a function
 shall have one of the following forms:</p><pre class='bnf'><span class='terminal'>friend</span> <i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i> <span class='terminal'>;</span>
@@ -525,21 +523,21 @@ class C;
 typedef C Ct;
 
 class X1 {
-  friend C;         <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
+  friend C;                     <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
 </span>};
 
 class X2 {
-  friend Ct;        <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
-</span>  friend D;         <span class='comment'>// error: no type-name <span class='texttt'>D</span> in scope
-</span>  friend class D;   <span class='comment'>// OK: elaborated-type-specifier declares new class
+  friend Ct;                    <span class='comment'>// OK: <span class='texttt'>class C</span> is a friend
+</span>  friend D;                     <span class='comment'>// error: no type-name <span class='texttt'>D</span> in scope
+</span>  friend class D;               <span class='comment'>// OK: elaborated-type-specifier declares new class
 </span>};
 
 template &lt;typename T&gt; class R {
   friend T;
 };
 
-R&lt;C&gt; rc;            <span class='comment'>// <span class='texttt'>class C</span> is a friend of <span class='texttt'>R&lt;C&gt;</span>
-</span>R&lt;int&gt; Ri;          <span class='comment'>// OK: <span class='texttt'>"friend int;"</span> is ignored
+R&lt;C&gt; rc;                        <span class='comment'>// <span class='texttt'>class C</span> is a friend of <span class='texttt'>R&lt;C&gt;</span>
+</span>R&lt;int&gt; Ri;                      <span class='comment'>// OK: <span class='texttt'>"friend int;"</span> is ignored
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.friend-4'><div class='marginalizedparent'><a class='marginalized' href='#class.friend-4'>4</a></div><p ><span class='indexparent'><a class='index' id='friend_function,linkage_of'></a></span>A function first declared in a friend declaration
 has the linkage of the namespace of which it is a member (<a href='basic.link'>[basic.link]</a>).
 Otherwise, the function retains its previous linkage (<a href='dcl.stc'>[dcl.stc]</a>).</p></div><div class='para' id='class.friend-5'><div class='marginalizedparent'><a class='marginalized' href='#class.friend-5'>5</a></div><p ><span class='indexparent'><a class='index' id='declaration,overloaded_name_and_friend'></a></span>When a
@@ -595,15 +593,13 @@ class B {
 
 class C  {
   void f(A* p) {
-    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>C</span> is not a friend of <span class='texttt'>A</span>
-</span>                    <span class='comment'>// despite being a friend of a friend
+    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>C</span> is not a friend of <span class='texttt'>A</span> despite being a friend of a friend
 </span>  }
 };
 
 class D : public B  {
   void f(A* p) {
-    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>D</span> is not a friend of <span class='texttt'>A</span>
-</span>                    <span class='comment'>// despite being derived from a friend
+    p-&gt;a++;         <span class='comment'>// error: <span class='texttt'>D</span> is not a friend of <span class='texttt'>A</span> despite being derived from a friend
 </span>  }
 };
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='class.friend-11'><div class='marginalizedparent'><a class='marginalized' href='#class.friend-11'>11</a></div><p ><span class='indexparent'><a class='index' id='local_class,friend'></a></span><span class='indexparent'><a class='index' id='friend,local_class_and'></a></span>If a friend declaration appears in a local class (<a href='class.local'>[class.local]</a>) and the
@@ -665,8 +661,7 @@ void fr(B* pb, D1* p1, D2* p2) {
   pb-&gt;i = 1;                    <span class='comment'>// ill-formed
 </span>  p1-&gt;i = 2;                    <span class='comment'>// ill-formed
 </span>  p2-&gt;i = 3;                    <span class='comment'>// OK (access through a <span class='texttt'>D2</span>)
-</span>  p2-&gt;B::i = 4;                 <span class='comment'>// OK (access through a <span class='texttt'>D2</span>, even though
-</span>                                <span class='comment'>// naming class is <span class='texttt'>B</span>)
+</span>  p2-&gt;B::i = 4;                 <span class='comment'>// OK (access through a <span class='texttt'>D2</span>, even though naming class is <span class='texttt'>B</span>)
 </span>  int B::* pmi_B = &amp;B::i;       <span class='comment'>// ill-formed
 </span>  int B::* pmi_B2 = &amp;D2::i;     <span class='comment'>// OK (type of <span class='texttt'>&amp;D2::i</span> is <span class='texttt'>int B::*</span>)
 </span>  B::j = 5;                     <span class='comment'>// ill-formed (not a friend of naming class <span class='texttt'>B</span>)
@@ -709,8 +704,7 @@ void f() {
   B* pb = &amp;d;
   D* pd = &amp;d;
 
-  pb-&gt;f();                      <span class='comment'>// OK: <span class='texttt'>B::f()</span> is public,
-</span>                                <span class='comment'>// <span class='texttt'>D::f()</span> is invoked
+  pb-&gt;f();                      <span class='comment'>// OK: <span class='texttt'>B::f()</span> is public, <span class='texttt'>D::f()</span> is invoked
 </span>  pd-&gt;f();                      <span class='comment'>// error: <span class='texttt'>D::f()</span> is private
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='virt-2'><div class='marginalizedparent'><a class='marginalized' href='#virt-2'>2</a></div><p >Access is checked at the call point using the type of the expression used
