--- a/class.cdtor.html
+++ b/class.cdtor.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang='en'><head><title>[class.cdtor]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>12</a> Special member functions <a class='abbr_ref' href='./#special'>[special]</a></h1><div id='class.cdtor'><h2 ><a class='secnum' style='min-width:88pt'>12.7</a> Construction and destruction <a class='abbr_ref'>[class.cdtor]</a></h2><p ><span class='indexparent'><a class='index' id='construction'></a></span><span class='indexparent'><a class='index' id='destruction'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p ><span class='indexparent'><a class='index' id='construction,member_access'></a></span><span class='indexparent'><a class='index' id='destruction,member_access'></a></span>For an object with a non-trivial constructor, referring to any non-static member
+<!DOCTYPE html><html lang='en'><head><title>[class.cdtor]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>12</a> Special member functions <a class='abbr_ref' href='./#special'>[special]</a></h1><div id='class.cdtor'><h2 ><a class='secnum' style='min-width:88pt'>12.7</a> Construction and destruction <a class='abbr_ref'>[class.cdtor]</a></h2><p ><span class='indexparent'><a class='index' id='construction'></a></span><span class='indexparent'><a class='index' id='destruction'></a></span>
+</p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p ><span class='indexparent'><a class='index' id='construction,member_access'></a></span><span class='indexparent'><a class='index' id='destruction,member_access'></a></span>For an object with a non-trivial constructor, referring to any non-static member
 or base class of the object before the constructor begins execution results in
 undefined behavior. For an object with a non-trivial destructor, referring to
 any non-static member or base class of the object after the destructor finishes
 execution results in undefined behavior.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct X { int i; };
 struct Y : X { Y(); };                  <span class='comment'>// non-trivial
 </span>struct A { int a; };
@@ -20,7 +22,8 @@ A* pa = &amp;bobj;                          <span class='comment'>// undefined, 
 extern X xobj;
 int* p3 = &amp;xobj.i;                      <span class='comment'>// OK, <span class='texttt'>X</span> is a trivial class
 </span>X xobj;
-</pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >For another example,</p><pre class='codeblock'>
+</pre><p >For another example,
+</p><pre class='codeblock'>
 struct W { int j; };
 struct X : public virtual W { };
 struct Y {
@@ -29,7 +32,7 @@ struct Y {
   Y() : p(&amp;x.j) {   <span class='comment'>// undefined, <span class='texttt'>x</span> is not yet constructed
 </span>    }
 };
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='indexparent'><a class='index' id='construction,pointer_to_member_or_base'></a></span><span class='indexparent'><a class='index' id='destruction,pointer_to_member_or_base'></a></span>To explicitly or implicitly convert a pointer (a glvalue) referring to
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p ><span class='indexparent'><a class='index' id='construction,pointer_to_member_or_base'></a></span><span class='indexparent'><a class='index' id='destruction,pointer_to_member_or_base'></a></span>To explicitly or implicitly convert a pointer (a glvalue) referring to
 an object of class
 <span class='texttt'>X</span>
 to a pointer (reference) to a direct or indirect base class
@@ -51,7 +54,8 @@ the construction of
 shall have started and its destruction shall not have completed,
 otherwise the computation of the pointer value (or accessing the member
 value) results in undefined behavior.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct A { };
 struct B : virtual A { };
 struct C : B { };
@@ -59,18 +63,15 @@ struct D : virtual A { D(A*); };
 struct X { X(A*); };
 
 struct E : C, D, X {
-  E() : D(this),    <span class='comment'>// undefined: upcast from <span class='texttt'>E*</span> to <span class='texttt'>A*</span>
-</span>                    <span class='comment'>// might use path <span class='texttt'>E*</span> <span class='math'>→</span> <span class='texttt'>D*</span> <span class='math'>→</span> <span class='texttt'>A*</span>
+  E() : D(this),    <span class='comment'>// undefined: upcast from <span class='texttt'>E*</span> to <span class='texttt'>A*</span> might use path <span class='texttt'>E*</span> <span class='math'>→</span> <span class='texttt'>D*</span> <span class='math'>→</span> <span class='texttt'>A*</span>
 </span>                    <span class='comment'>// but <span class='texttt'>D</span> is not constructed
-</span>                    <span class='comment'>// <span class='texttt'>D((C*)this)</span>, // defined:
-</span>                    <span class='comment'>// <span class='texttt'>E*</span> <span class='math'>→</span> <span class='texttt'>C*</span> defined because <span class='texttt'>E()</span> has started
-</span>                    <span class='comment'>// and <span class='texttt'>C*</span> <span class='math'>→</span> <span class='texttt'>A*</span> defined because
-</span>                    <span class='comment'>// <span class='texttt'>C</span> fully constructed
-</span>  X(this) {         <span class='comment'>// defined: upon construction of <span class='texttt'>X</span>,
-</span>                    <span class='comment'>// <span class='texttt'>C/B/D/A</span> sublattice is fully constructed
-</span>  }
-};
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='virtual_function_call,constructor_and'></a></span><span class='indexparent'><a class='index' id='virtual_function_call,destructor_and'></a></span><span class='indexparent'><a class='index' id='construction,virtual_function_call'></a></span><span class='indexparent'><a class='index' id='destruction,virtual_function_call'></a></span>Member functions, including virtual functions (<a href='class.virtual'>[class.virtual]</a>), can be called
+</span>
+                    <span class='comment'>// “<span class='texttt'>D((C*)this)</span>” would be defined: <span class='texttt'>E*</span> <span class='math'>→</span> <span class='texttt'>C*</span> is defined because <span class='texttt'>E()</span> has started,
+</span>                    <span class='comment'>// and <span class='texttt'>C*</span> <span class='math'>→</span> <span class='texttt'>A*</span> is defined because <span class='texttt'>C</span> is fully constructed
+</span>
+  X(this) {}        <span class='comment'>// defined: upon construction of <span class='texttt'>X</span>, <span class='texttt'>C/B/D/A</span> sublattice is fully constructed
+</span>};
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='indexparent'><a class='index' id='virtual_function_call,constructor_and'></a></span><span class='indexparent'><a class='index' id='virtual_function_call,destructor_and'></a></span><span class='indexparent'><a class='index' id='construction,virtual_function_call'></a></span><span class='indexparent'><a class='index' id='destruction,virtual_function_call'></a></span>Member functions, including virtual functions (<a href='class.virtual'>[class.virtual]</a>), can be called
 during construction or destruction (<a href='class.base.init'>[class.base.init]</a>).
 When a virtual function is called directly or indirectly from a constructor
 or from a destructor,
@@ -113,7 +114,7 @@ B::B(V* v, A* a) {
 </span>  v-&gt;g();           <span class='comment'>// <span class='texttt'>v</span> is base of <span class='texttt'>B</span>, the call is well-defined, calls <span class='texttt'>B::g</span>
 </span>  a-&gt;f();           <span class='comment'>// undefined behavior, <span class='texttt'>a</span>'s type not a base of <span class='texttt'>B</span>
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='construction,typeid'></a></span><span class='indexparent'><a class='index' id='destruction,typeid'></a></span><span class='indexparent'><a class='index' id='typeid,construction_and'></a></span><span class='indexparent'><a class='index' id='typeid,destruction_and'></a></span>The
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='construction,typeid'></a></span><span class='indexparent'><a class='index' id='destruction,typeid'></a></span><span class='indexparent'><a class='index' id='typeid,construction_and'></a></span><span class='indexparent'><a class='index' id='typeid,destruction_and'></a></span>The
 <span class='texttt'>typeid</span>
 operator (<a href='expr.typeid'>[expr.typeid]</a>) can be used during construction or destruction (<a href='class.base.init'>[class.base.init]</a>).
 When
@@ -133,7 +134,7 @@ If the operand of
 <span class='texttt'>typeid</span>
 refers to the object under construction or destruction and the static type of
 the operand is neither the constructor or destructor's class nor one of its
-bases, the behavior is undefined.</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p ><span class='indexparent'><a class='index' id='construction,dynamic_cast_and'></a></span><span class='indexparent'><a class='index' id='destruction,dynamic_cast_and'></a></span><span class='indexparent'><a class='index' id='cast,dynamic,construction_and'></a></span><span class='indexparent'><a class='index' id='cast,dynamic,destruction_and'></a></span><span class='texttt'>dynamic_cast</span>s (<a href='expr.dynamic.cast'>[expr.dynamic.cast]</a>) can be used during construction
+bases, the behavior is undefined.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='construction,dynamic_cast_and'></a></span><span class='indexparent'><a class='index' id='destruction,dynamic_cast_and'></a></span><span class='indexparent'><a class='index' id='cast,dynamic,construction_and'></a></span><span class='indexparent'><a class='index' id='cast,dynamic,destruction_and'></a></span><span class='texttt'>dynamic_cast</span>s (<a href='expr.dynamic.cast'>[expr.dynamic.cast]</a>) can be used during construction
 or destruction (<a href='class.base.init'>[class.base.init]</a>). When a
 <span class='texttt'>dynamic_cast</span>
 is used in a constructor (including the
@@ -151,7 +152,9 @@ refers to the object under construction or destruction and the static type of
 the operand is not a pointer to or object of the constructor or destructor's
 own class or one of its bases, the
 <span class='texttt'>dynamic_cast</span>
-results in undefined behavior.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+results in undefined behavior.
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct V {
   virtual void f();
 };
@@ -168,12 +171,11 @@ struct D : A, B {
 
 B::B(V* v, A* a) {
   typeid(*this);                <span class='comment'>// <span class='texttt'>type_info</span> for <span class='texttt'>B</span>
-</span>  typeid(*v);                   <span class='comment'>// well-defined: <span class='texttt'>*v</span> has type <span class='texttt'>V</span>, a base of <span class='texttt'>B</span>
-</span>                                <span class='comment'>// yields <span class='texttt'>type_info</span> for <span class='texttt'>B</span>
+</span>  typeid(*v);                   <span class='comment'>// well-defined: <span class='texttt'>*v</span> has type <span class='texttt'>V</span>, a base of <span class='texttt'>B</span> yields <span class='texttt'>type_info</span> for <span class='texttt'>B</span>
 </span>  typeid(*a);                   <span class='comment'>// undefined behavior: type <span class='texttt'>A</span> not a base of <span class='texttt'>B</span>
-</span>  dynamic_cast&lt;B*&gt;(v);          <span class='comment'>// well-defined: <span class='texttt'>v</span> of type <span class='texttt'>V*</span>, <span class='texttt'>V</span> base of <span class='texttt'>B</span>
-</span>                                <span class='comment'>// results in <span class='texttt'>B*</span>
-</span>  dynamic_cast&lt;B*&gt;(a);          <span class='comment'>// undefined behavior,
-</span>                                <span class='comment'>// <span class='texttt'>a</span> has type <span class='texttt'>A*</span>, <span class='texttt'>A</span> not a base of <span class='texttt'>B</span>
+</span>  dynamic_cast&lt;B*&gt;(v);          <span class='comment'>// well-defined: <span class='texttt'>v</span> of type <span class='texttt'>V*</span>, <span class='texttt'>V</span> base of <span class='texttt'>B</span> results in <span class='texttt'>B*</span>
+</span>  dynamic_cast&lt;B*&gt;(a);          <span class='comment'>// undefined behavior, <span class='texttt'>a</span> has type <span class='texttt'>A*</span>, <span class='texttt'>A</span> not a base of <span class='texttt'>B</span>
 </span>}
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]<span class='indexparent'><a class='index' id='destruction'></a></span><span class='indexparent'><a class='index' id='construction'></a></span></p></div></div></div></body></html>
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
+<span class='indexparent'><a class='index' id='destruction'></a></span><span class='indexparent'><a class='index' id='construction'></a></span>
+</p></div></div></div></body></html>
