--- a/class.conv.fct.html
+++ b/class.conv.fct.html
@@ -16,10 +16,12 @@ a <i ><a href='dcl.type#nt:defining-type-specifier'>defining-type-specifier</a><
 A conversion function is never used to convert a (possibly cv-qualified) object
 to the (possibly cv-qualified) same object type (or a reference to it),
 to a (possibly cv-qualified) base class of that type (or a reference to it),
-or to (possibly cv-qualified) void.<a class='footnotenum' href='#footnote-117'>117</a></p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+or to (possibly cv-qualified) void.<a class='footnotenum' href='#footnote-117'>117</a>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct X {
   operator int();
-  operator auto() -&gt; short;  <span class='comment'>// error: trailing return type
+  operator auto() -&gt; short;     <span class='comment'>// error: trailing return type
 </span>};
 
 void f(X a) {
@@ -30,7 +32,8 @@ void f(X a) {
 </pre><p >In all three cases the value assigned will be converted by
 <span class='texttt'>X::operator int()</span>.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >A conversion function may be explicit (<a href='dcl.fct.spec'>[dcl.fct.spec]</a>), in which case it is only considered as a user-defined conversion for direct-initialization (<a href='dcl.init'>[dcl.init]</a>). Otherwise, user-defined conversions are not restricted to use in assignments and initializations.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Y { };
 struct Z {
   explicit operator Y() const;
@@ -60,24 +63,26 @@ tokens that could possibly form a <i ><a href='class.conv.fct#nt:conversion-type
 [&nbsp;<i>Note:</i>
 This prevents ambiguities between the declarator operator <span class='texttt'>*</span> and its expression
 counterparts.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 &amp;ac.operator int*i; <span class='comment'>// syntax error:
 </span>                    <span class='comment'>// parsed as: <span class='texttt'>&amp;(ac.operator int *)i</span>
 </span>                    <span class='comment'>// not as: <span class='texttt'>&amp;(ac.operator int)*i</span>
 </span></pre><p >The <span class='texttt'>*</span> is the pointer declarator and not the multiplication operator.
-<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p >This rule also prevents ambiguities for attributes. 
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]
+This rule also prevents ambiguities for attributes. 
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-operator int [[noreturn]] (); <span class='comment'>// error: <span class='texttt'>noreturn</span> attribute applied to a type
+operator int [[noreturn]] ();   <span class='comment'>// error: <span class='texttt'>noreturn</span> attribute applied to a type
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='conversion,inheritance_of_user-defined'></a></span>Conversion functions are inherited.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p ><span class='indexparent'><a class='index' id='conversion,virtual_user-defined'></a></span>Conversion functions can be virtual.</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p ><span class='indexparent'><a class='index' id='conversion,deduced_return_type_of_user-defined'></a></span>A conversion function template shall not have a
 deduced return type (<a href='dcl.spec.auto'>[dcl.spec.auto]</a>).
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct S {
-  operator auto() const { return 10; }   <span class='comment'>// OK
+  operator auto() const { return 10; }      <span class='comment'>// OK
 </span>  template&lt;class T&gt;
-  operator auto() const { return 1.2; }  <span class='comment'>// error: conversion function template
+  operator auto() const { return 1.2; }     <span class='comment'>// error: conversion function template
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-117'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-117'>117)</a></div><p >These conversions are considered
 as standard conversions for the purposes of overload resolution (<a href='over.best.ics'>[over.best.ics]</a>, <a href='over.ics.ref'>[over.ics.ref]</a>) and therefore initialization (<a href='dcl.init'>[dcl.init]</a>) and explicit casts (<a href='expr.static.cast'>[expr.static.cast]</a>). A conversion to <span class='texttt'>void</span> does not invoke any conversion function (<a href='expr.static.cast'>[expr.static.cast]</a>).
