--- a/class.conv.html
+++ b/class.conv.html
@@ -10,7 +10,9 @@ Access control is applied after ambiguity resolution (<a href='basic.lookup'>[ba
 See <a href='over.match'>[over.match]</a> for a discussion of the use of conversions in function calls
 as well as examples below.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='conversion,implicit_user-defined'></a></span>At most one user-defined conversion (constructor or conversion function)
-is implicitly applied to a single value.</p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+is implicitly applied to a single value.
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct X {
   operator int();
 };
@@ -20,15 +22,15 @@ struct Y {
 };
 
 Y a;
-int b = a;          <span class='comment'>// error
-</span>                    <span class='comment'>// <span class='texttt'>a.operator X().operator int()</span> not tried
+int b = a;          <span class='comment'>// error, <span class='texttt'>a.operator X().operator int()</span> not tried
 </span>int c = X(a);       <span class='comment'>// OK: <span class='texttt'>a.operator X().operator int()</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >User-defined conversions are used implicitly only if they are unambiguous.
 <span class='indexparent'><a class='index' id='name_hiding,user-defined_conversion_and'></a></span>A conversion function in a derived class does not hide a conversion function
 in a base class unless the two functions convert to the same type.
 Function overload resolution (<a href='over.match.best'>[over.match.best]</a>) selects the best
 conversion function to perform the conversion.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct X {
   operator int();
 };
@@ -38,11 +40,11 @@ struct Y : X {
 };
 
 void f(Y&amp; a) {
-  if (a) {          <span class='comment'>// ill-formed:
-</span>                    <span class='comment'>// <span class='texttt'>X::operator int()</span> or <span class='texttt'>Y::operator char()</span>
+  if (a) {          <span class='comment'>// ill-formed: <span class='texttt'>X::operator int()</span> or <span class='texttt'>Y::operator char()</span>
 </span>  }
 }
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div id='ctor'><h3 ><a class='secnum' href='#ctor' style='min-width:103pt'>12.3.1</a> Conversion by constructor <a class='abbr_ref' href='class.conv.ctor'>[class.conv.ctor]</a></h3><p ><span class='indexparent'><a class='index' id='conversion,user-defined'></a></span></p><div class='para' id='ctor-1'><div class='marginalizedparent'><a class='marginalized' href='#ctor-1'>1</a></div><p >A constructor declared without the
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div id='ctor'><h3 ><a class='secnum' href='#ctor' style='min-width:103pt'>12.3.1</a> Conversion by constructor <a class='abbr_ref' href='class.conv.ctor'>[class.conv.ctor]</a></h3><p ><span class='indexparent'><a class='index' id='conversion,user-defined'></a></span>
+</p><div class='para' id='ctor-1'><div class='marginalizedparent'><a class='marginalized' href='#ctor-1'>1</a></div><p >A constructor declared without the
 <i ><a href='dcl.fct.spec#nt:function-specifier'>function-specifier</a></i>
 <span class='texttt'>explicit</span>
 specifies a conversion from
@@ -66,12 +68,14 @@ void f(X arg) {
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='ctor-2'><div class='marginalizedparent'><a class='marginalized' href='#ctor-2'>2</a></div><p >[&nbsp;<i>Note:</i>
 An explicit constructor constructs objects just like non-explicit
-constructors, but does so only where the direct-initialization syntax (<a href='dcl.init'>[dcl.init]</a>) or where casts (<a href='expr.static.cast'>[expr.static.cast]</a>, <a href='expr.cast'>[expr.cast]</a>) are explicitly
+constructors, but does so only where the direct-initialization syntax (<a href='dcl.init'>[dcl.init]</a>)
+or where casts (<a href='expr.static.cast'>[expr.static.cast]</a>, <a href='expr.cast'>[expr.cast]</a>) are explicitly
 used; see also <a href='over.match.copy'>[over.match.copy]</a>.
 A default constructor may be an explicit constructor; such a constructor
 will be used to perform default-initialization
 or value-initialization (<a href='dcl.init'>[dcl.init]</a>).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct Z {
   explicit Z();
   explicit Z(int);
@@ -113,10 +117,12 @@ a <i ><a href='dcl.type#nt:defining-type-specifier'>defining-type-specifier</a><
 A conversion function is never used to convert a (possibly cv-qualified) object
 to the (possibly cv-qualified) same object type (or a reference to it),
 to a (possibly cv-qualified) base class of that type (or a reference to it),
-or to (possibly cv-qualified) void.<a class='footnotenum' href='#footnote-117'>117</a></p><p >[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+or to (possibly cv-qualified) void.<a class='footnotenum' href='#footnote-117'>117</a>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 struct X {
   operator int();
-  operator auto() -&gt; short;  <span class='comment'>// error: trailing return type
+  operator auto() -&gt; short;     <span class='comment'>// error: trailing return type
 </span>};
 
 void f(X a) {
@@ -127,7 +133,8 @@ void f(X a) {
 </pre><p >In all three cases the value assigned will be converted by
 <span class='texttt'>X::operator int()</span>.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='fct-2'><div class='marginalizedparent'><a class='marginalized' href='#fct-2'>2</a></div><p >A conversion function may be explicit (<a href='dcl.fct.spec'>[dcl.fct.spec]</a>), in which case it is only considered as a user-defined conversion for direct-initialization (<a href='dcl.init'>[dcl.init]</a>). Otherwise, user-defined conversions are not restricted to use in assignments and initializations.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 class Y { };
 struct Z {
   explicit operator Y() const;
@@ -157,24 +164,26 @@ tokens that could possibly form a <i ><a href='class.conv.fct#nt:conversion-type
 [&nbsp;<i>Note:</i>
 This prevents ambiguities between the declarator operator <span class='texttt'>*</span> and its expression
 counterparts.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 &amp;ac.operator int*i; <span class='comment'>// syntax error:
 </span>                    <span class='comment'>// parsed as: <span class='texttt'>&amp;(ac.operator int *)i</span>
 </span>                    <span class='comment'>// not as: <span class='texttt'>&amp;(ac.operator int)*i</span>
 </span></pre><p >The <span class='texttt'>*</span> is the pointer declarator and not the multiplication operator.
-<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p >This rule also prevents ambiguities for attributes. 
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]
+This rule also prevents ambiguities for attributes. 
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-operator int [[noreturn]] (); <span class='comment'>// error: <span class='texttt'>noreturn</span> attribute applied to a type
+operator int [[noreturn]] ();   <span class='comment'>// error: <span class='texttt'>noreturn</span> attribute applied to a type
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='fct-4'><div class='marginalizedparent'><a class='marginalized' href='#fct-4'>4</a></div><p ><span class='indexparent'><a class='index' id='conversion,inheritance_of_user-defined'></a></span>Conversion functions are inherited.</p></div><div class='para' id='fct-5'><div class='marginalizedparent'><a class='marginalized' href='#fct-5'>5</a></div><p ><span class='indexparent'><a class='index' id='conversion,virtual_user-defined'></a></span>Conversion functions can be virtual.</p></div><div class='para' id='fct-6'><div class='marginalizedparent'><a class='marginalized' href='#fct-6'>6</a></div><p ><span class='indexparent'><a class='index' id='conversion,deduced_return_type_of_user-defined'></a></span>A conversion function template shall not have a
 deduced return type (<a href='dcl.spec.auto'>[dcl.spec.auto]</a>).
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 struct S {
-  operator auto() const { return 10; }   <span class='comment'>// OK
+  operator auto() const { return 10; }      <span class='comment'>// OK
 </span>  template&lt;class T&gt;
-  operator auto() const { return 1.2; }  <span class='comment'>// error: conversion function template
+  operator auto() const { return 1.2; }     <span class='comment'>// error: conversion function template
 </span>};
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-117'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-117'>117)</a></div><p >These conversions are considered
 as standard conversions for the purposes of overload resolution (<a href='over.best.ics'>[over.best.ics]</a>, <a href='over.ics.ref'>[over.ics.ref]</a>) and therefore initialization (<a href='dcl.init'>[dcl.init]</a>) and explicit casts (<a href='expr.static.cast'>[expr.static.cast]</a>). A conversion to <span class='texttt'>void</span> does not invoke any conversion function (<a href='expr.static.cast'>[expr.static.cast]</a>).
