--- a/class.dtor.html
+++ b/class.dtor.html
@@ -159,7 +159,7 @@ in particular, the
 <span class='texttt'>~X()</span>
 in a member function is not an explicit destructor call (<a href='expr.unary.op'>[expr.unary.op]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='15'><div class='marginalizedparent'><a class='marginalized' href='#15'>15</a></div><p >[&nbsp;<i>Note:</i>
-<span class='indexparent'><a class='index' id='object,destructor_and_placement_of'></a></span>explicit calls of destructors are rarely needed.
+<span class='indexparent'><a class='index' id='object,destructor_and_placement_of'></a></span>Explicit calls of destructors are rarely needed.
 One use of such calls is for objects placed at specific
 addresses using a placement
 <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.
@@ -167,8 +167,7 @@ Such use of explicit placement and destruction of objects can be necessary
 to cope with dedicated hardware resources and for writing memory management
 facilities.
 For example,
-<span class='indexparent'><a class='index' id='example,explicit_destructor_call'></a></span>
-</p><pre class='codeblock'>
+<span class='indexparent'><a class='index' id='example,explicit_destructor_call'></a></span></p><pre class='codeblock'>
 void* operator new(std::size_t, void* p) { return p; }
 struct X {
   X(int);
@@ -186,15 +185,16 @@ void g() {                      <span class='comment'>// rare, specialized use:
 the behavior is undefined if the destructor is invoked
 for an object whose lifetime has ended (<a href='basic.life'>[basic.life]</a>).
 [&nbsp;<i>Example:</i>
-if the destructor for an automatic object is explicitly invoked,
+If the destructor for an automatic object is explicitly invoked,
 and the block is subsequently left in a manner that would ordinarily
 invoke implicit destruction of the object, the behavior is undefined.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='17'><div class='marginalizedparent'><a class='marginalized' href='#17'>17</a></div><p >[&nbsp;<i>Note:</i>
-<span class='indexparent'><a class='index' id='fundamental_type,destructor_and'></a></span>the notation for explicit call of a destructor can be used for any scalar type
+<span class='indexparent'><a class='index' id='fundamental_type,destructor_and'></a></span>The notation for explicit call of a destructor can be used for any scalar type
 name (<a href='expr.pseudo'>[expr.pseudo]</a>).
 Allowing this makes it possible to write code without having to know if a
 destructor exists for a given type.
-For example,</p><pre class='codeblock'>
+For example:
+</p><pre class='codeblock'>
 typedef int I;
 I* p;
 p-&gt;I::~I();
