--- a/class.nest.html
+++ b/class.nest.html
@@ -40,7 +40,7 @@ struct enclose {
 
 int enclose::inner::x = 1;
 
-void enclose::inner::f(int i) { <span class='comment'>/* ... */</span> }
+void enclose::inner::f(int i) { <span class='texttt'>/* ... */</span> }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >If class <span class='texttt'>X</span> is defined in a namespace scope, a nested class
 <span class='texttt'>Y</span> may be declared in class <span class='texttt'>X</span> and later defined in the
 definition of class <span class='texttt'>X</span> or be later defined in a namespace scope
