--- a/dcl.dcl.html
+++ b/dcl.dcl.html
@@ -247,11 +247,11 @@ can have a different linkage, however.
 <span class='indexparent'><a class='index' id='example,linkage_consistency'></a></span></p><pre class='codeblock'>
 static char* f();               <span class='comment'>// <span class='texttt'>f()</span> has internal linkage
 </span>char* f()                       <span class='comment'>// <span class='texttt'>f()</span> still has internal linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 char* g();                      <span class='comment'>// <span class='texttt'>g()</span> has external linkage
 </span>static char* g()                <span class='comment'>// error: inconsistent linkage
-</span>  { <span class='comment'>/* ... */</span> }
+</span>  { <span class='texttt'>/* ... */</span> }
 
 void h();
 inline void h();                <span class='comment'>// external linkage
@@ -358,7 +358,7 @@ is the <i ><a href='dcl.dcl#nt:declaration'>declaration</a></i> of a <i ><a href
 redefine the name of any type declared in that scope to refer to the
 type to which it already refers.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-typedef struct s { <span class='comment'>/* ... */</span> } s;
+typedef struct s { <span class='texttt'>/* ... */</span> } s;
 typedef int I;
 typedef int I;
 typedef I I;
@@ -1215,7 +1215,7 @@ template&lt;class T&gt; struct container {
 };
 template&lt;class Iter&gt;
 container(Iter b, Iter e) -&gt; container&lt;typename std::iterator_traits&lt;Iter&gt;::value_type&gt;;
-std::vector&lt;double&gt; v = { <span class='comment'>/* ... */</span>};
+std::vector&lt;double&gt; v = { <span class='texttt'>/* ... */</span> };
 
 container c(7);                         <span class='comment'>// OK, deduces <span class='texttt'>int</span> for <span class='texttt'>T</span>
 </span>auto d = container(v.begin(), v.end()); <span class='comment'>// OK, deduces <span class='texttt'>double</span> for <span class='texttt'>T</span>
@@ -1601,7 +1601,7 @@ if the primary template is declared in an inline namespace.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 namespace X {
-  void f() { <span class='comment'>/* ... */</span> }        <span class='comment'>// OK: introduces <span class='texttt'>X::f()</span>
+  void f() { <span class='texttt'>/* ... */</span> }        <span class='comment'>// OK: introduces <span class='texttt'>X::f()</span>
 </span>
   namespace M {
     void g();                   <span class='comment'>// OK: introduces <span class='texttt'>X::M::g()</span>
@@ -1621,15 +1621,15 @@ namespace Q {
   namespace V {
     void f();
   }
-  void V::f() { <span class='comment'>/* ... */</span> }     <span class='comment'>// OK
-</span>  void V::g() { <span class='comment'>/* ... */</span> }     <span class='comment'>// error: <span class='texttt'>g()</span> is not yet a member of <span class='texttt'>V</span>
+  void V::f() { <span class='texttt'>/* ... */</span> }     <span class='comment'>// OK
+</span>  void V::g() { <span class='texttt'>/* ... */</span> }     <span class='comment'>// error: <span class='texttt'>g()</span> is not yet a member of <span class='texttt'>V</span>
 </span>  namespace V {
     void g();
   }
 }
 
 namespace R {
-  void Q::V::g() { <span class='comment'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>R</span> doesn't enclose <span class='texttt'>Q</span>
+  void Q::V::g() { <span class='texttt'>/* ... */</span> }  <span class='comment'>// error: <span class='texttt'>R</span> doesn't enclose <span class='texttt'>Q</span>
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='namespace.memdef-3'><div class='marginalizedparent'><a class='marginalized' href='#namespace.memdef-3'>3</a></div><p >If a <span class='texttt'>friend</span> declaration in a non-local class first declares a
 class, function, class template or function template<a class='footnotenum' href='#footnote-97'>97</a>
@@ -1670,8 +1670,8 @@ namespace A {
   <span class='comment'>// <span class='texttt'>A::f</span>, <span class='texttt'>A::g</span> and <span class='texttt'>A::h</span> are not visible here
 </span>  X x;
   void g() { f(x); }            <span class='comment'>// definition of <span class='texttt'>A::g</span>
-</span>  void f(X) <span class='texttt'>{ /* ... */}</span>       <span class='comment'>// definition of <span class='texttt'>A::f</span>
-</span>  void h(int) <span class='texttt'>{ /* ... */ }</span>    <span class='comment'>// definition of <span class='texttt'>A::h</span>
+</span>  void f(X) { <span class='texttt'>/* ... */</span> }       <span class='comment'>// definition of <span class='texttt'>A::f</span>
+</span>  void h(int) { <span class='texttt'>/* ... */</span> }     <span class='comment'>// definition of <span class='texttt'>A::h</span>
 </span>  <span class='comment'>// <span class='texttt'>A::f</span>, <span class='texttt'>A::g</span> and <span class='texttt'>A::h</span> are visible here and known to be friends
 </span>}
 
@@ -1700,7 +1700,7 @@ declarative region to refer only to the namespace to which it already
 refers.
 [&nbsp;<i>Example:</i>
 the following declarations are well-formed:</p><pre class='codeblock'>
-namespace Company_with_very_long_name { <span class='comment'>/* ... */</span> }
+namespace Company_with_very_long_name { <span class='texttt'>/* ... */</span> }
 namespace CWVLN = Company_with_very_long_name;
 namespace CWVLN = Company_with_very_long_name;  <span class='comment'>// OK: duplicate
 </span>namespace CWVLN = CWVLN;
