--- a/over.html
+++ b/over.html
@@ -91,22 +91,23 @@ be overloaded:</p><ul class='itemize'><li id='load-3.1'><div class='marginalized
 A
 <span class='texttt'>typedef</span>
 is not a separate type, but only a synonym for another type (<a href='dcl.typedef'>[dcl.typedef]</a>).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 typedef int Int;
 
 void f(int i);
 void f(Int i);                  <span class='comment'>// OK: redeclaration of <span class='texttt'>f(int)</span>
-</span>void f(int i) <span class='texttt'>{ /* ... */ }</span>
-void f(Int i) <span class='texttt'>{ /* ... */ }</span>    <span class='comment'>// error: redefinition of <span class='texttt'>f(int)</span>
-</span>
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='enum,overloading_and'></a></span>Enumerations, on the other hand, are distinct types and can be used to
+</span>void f(int i) { <span class='texttt'>/* ... */</span> }
+void f(Int i) { <span class='texttt'>/* ... */</span> }     <span class='comment'>// error: redefinition of <span class='texttt'>f(int)</span>
+</span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='enum,overloading_and'></a></span>Enumerations, on the other hand, are distinct types and can be used to
 distinguish
 overloaded function declarations.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 enum E { a };
 
-void f(int i) <span class='texttt'>{ /* ... */ }</span>
-void f(E i)   <span class='texttt'>{ /* ... */ }</span>
+void f(int i) { <span class='texttt'>/* ... */</span> }
+void f(E i)   { <span class='texttt'>/* ... */</span> }
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></li><li id='load-3.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#load-3.2'>(3.2)</a></div><p ><span class='indexparent'><a class='index' id='overloading,array_versus_pointer'></a></span><span class='indexparent'><a class='index' id='array,overloading_and_pointer_versus'></a></span>Parameter declarations that differ only in a pointer
 <span class='texttt'>*</span>
 versus an array
@@ -147,13 +148,14 @@ type-specifiers for
 each parameter type are ignored when determining which function is being
 declared,
 defined, or called.
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 typedef const int cInt;
 
 int f (int);
 int f (const int);              <span class='comment'>// redeclaration of <span class='texttt'>f(int)</span>
-</span>int f (int) <span class='texttt'>{ /* ... */ }</span>      <span class='comment'>// definition of <span class='texttt'>f(int)</span>
-</span>int f (cInt) <span class='texttt'>{ /* ... */ }</span>     <span class='comment'>// error: redefinition of <span class='texttt'>f(int)</span>
+</span>int f (int) { <span class='texttt'>/* ... */</span> }       <span class='comment'>// definition of <span class='texttt'>f(int)</span>
+</span>int f (cInt) { <span class='texttt'>/* ... */</span> }      <span class='comment'>// error: redefinition of <span class='texttt'>f(int)</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p><p >Only the
 <span class='texttt'>const</span>
 and
