--- a/temp.alias.html
+++ b/temp.alias.html
@@ -9,17 +9,17 @@ substitution of its <i ><a href='temp.names#nt:template-argument'>template-argum
 the alias template.
 [&nbsp;<i>Note:</i> An alias template name is never deduced.<i>&nbsp;—&nbsp;end note</i>&nbsp;]
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;class T&gt; struct Alloc { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; struct Alloc { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; using Vec = vector&lt;T, Alloc&lt;T&gt;&gt;;
 Vec&lt;int&gt; v;         <span class='comment'>// same as <span class='texttt'>vector&lt;int, Alloc&lt;int&gt;&gt; v;</span>
 </span>
 template&lt;class T&gt;
   void process(Vec&lt;T&gt;&amp; v)
-  { <span class='comment'>/* ... */</span> }
+  { <span class='texttt'>/* ... */</span> }
 
 template&lt;class T&gt;
   void process(vector&lt;T, Alloc&lt;T&gt;&gt;&amp; w)
-  { <span class='comment'>/* ... */</span> }     <span class='comment'>// error: redefinition
+  { <span class='texttt'>/* ... */</span> }     <span class='comment'>// error: redefinition
 </span>
 template&lt;template&lt;class&gt; class TT&gt;
   void f(TT&lt;int&gt;);
