--- a/temp.arg.html
+++ b/temp.arg.html
@@ -69,7 +69,7 @@ template&lt;class T&gt; class X {
 
 class Y {
 private:
-  struct S { <span class='comment'>/* ... */</span> };
+  struct S { <span class='texttt'>/* ... */</span> };
   X&lt;S&gt; x;           <span class='comment'>// OK: <span class='texttt'>S</span> is accessible
 </span>                    <span class='comment'>// <span class='texttt'>X&lt;Y::S&gt;</span> has a static member of type <span class='texttt'>Y::S</span>
 </span>                    <span class='comment'>// OK: even though <span class='texttt'>Y::S</span> is private
@@ -88,7 +88,7 @@ template &lt;template &lt;class TT&gt; class T&gt; class A {
 
 template &lt;class U&gt; class B {
 private:
-  struct S { <span class='comment'>/* ... */</span> };
+  struct S { <span class='texttt'>/* ... */</span> };
 };
 
 A&lt;B&gt; b;             <span class='comment'>// ill-formed: <span class='texttt'>A</span> has no access to <span class='texttt'>B::S</span>
@@ -204,27 +204,27 @@ represents a set of overloaded functions
 the matching function is selected from the set (<a href='over.over'>[over.over]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='nontype-3'><div class='marginalizedparent'><a class='marginalized' href='#nontype-3'>3</a></div><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template&lt;const int* pci&gt; struct X { <span class='comment'>/* ... */</span> };
+template&lt;const int* pci&gt; struct X { <span class='texttt'>/* ... */</span> };
 int ai[10];
 X&lt;ai&gt; xi;                       <span class='comment'>// array to pointer and qualification conversions
 </span>
-struct Y { <span class='comment'>/* ... */</span> };
-template&lt;const Y&amp; b&gt; struct Z { <span class='comment'>/* ... */</span> };
+struct Y { <span class='texttt'>/* ... */</span> };
+template&lt;const Y&amp; b&gt; struct Z { <span class='texttt'>/* ... */</span> };
 Y y;
 Z&lt;y&gt; z;                         <span class='comment'>// no conversion, but note extra cv-qualification
 </span>
-template&lt;int (&amp;pa)[5]&gt; struct W { <span class='comment'>/* ... */</span> };
+template&lt;int (&amp;pa)[5]&gt; struct W { <span class='texttt'>/* ... */</span> };
 int b[5];
 W&lt;b&gt; w;                         <span class='comment'>// no conversion
 </span>
 void f(char);
 void f(int);
 
-template&lt;void (*pf)(int)&gt; struct A { <span class='comment'>/* ... */</span> };
+template&lt;void (*pf)(int)&gt; struct A { <span class='texttt'>/* ... */</span> };
 
 A&lt;&amp;f&gt; a;                        <span class='comment'>// selects <span class='texttt'>f(int)</span>
 </span>
-template&lt;auto n&gt; struct B { <span class='comment'>/* ... */</span> };
+template&lt;auto n&gt; struct B { <span class='texttt'>/* ... */</span> };
 B&lt;5&gt; b1;   <span class='comment'>// OK: template parameter type is <span class='texttt'>int</span>
 </span>B&lt;'a'&gt; b2; <span class='comment'>// OK: template parameter type is <span class='texttt'>char</span>
 </span>B&lt;2.5&gt; b3; <span class='comment'>// error: template parameter type cannot be <span class='texttt'>double</span>
@@ -234,7 +234,7 @@ is not an acceptable
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
 template&lt;class T, const char* p&gt; class X {
-  <span class='comment'>/* ... */</span>
+  <span class='texttt'>/* ... */</span>
 };
 
 X&lt;int, "Studebaker"&gt; x1;        <span class='comment'>// error: string literal as template-argument
@@ -264,7 +264,7 @@ when the corresponding
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 has reference type.
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;const int&amp; CRI&gt; struct B { <span class='comment'>/* ... */</span> };
+template&lt;const int&amp; CRI&gt; struct B { <span class='texttt'>/* ... */</span> };
 
 B&lt;1&gt; b2;                        <span class='comment'>// error: temporary would be required for template argument
 </span>
@@ -321,13 +321,13 @@ parameters or template parameter packs in the <i ><a href='temp#nt:template-para
 <span class='texttt'>A</span> with the same type and form as the template parameter pack in <span class='texttt'>P</span>
 (ignoring whether those template parameters are template parameter packs).</p><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template&lt;class T&gt; class A { <span class='comment'>/* ... */</span> };
-template&lt;class T, class U = T&gt; class B { <span class='comment'>/* ... */</span> };
-template&lt;class ... Types&gt; class C { <span class='comment'>/* ... */</span> };
-template&lt;auto n&gt; class D { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;class&gt; class P&gt; class X { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;class ...&gt; class Q&gt; class Y { <span class='comment'>/* ... */</span> };
-template&lt;template&lt;int&gt; class R&gt; class Z { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; class A { <span class='texttt'>/* ... */</span> };
+template&lt;class T, class U = T&gt; class B { <span class='texttt'>/* ... */</span> };
+template&lt;class ... Types&gt; class C { <span class='texttt'>/* ... */</span> };
+template&lt;auto n&gt; class D { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;class&gt; class P&gt; class X { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;class ...&gt; class Q&gt; class Y { <span class='texttt'>/* ... */</span> };
+template&lt;template&lt;int&gt; class R&gt; class Z { <span class='texttt'>/* ... */</span> };
 
 X&lt;A&gt; xa;            <span class='comment'>// OK
 </span>X&lt;B&gt; xb;            <span class='comment'>// OK
