--- a/temp.fct.spec.html
+++ b/temp.fct.spec.html
@@ -1037,9 +1037,9 @@ is deduced.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='temp.deduct.type-7'><div class='marginalizedparent'><a class='marginalized' href='#temp.deduct.type-7'>7</a></div><p >[&nbsp;<i>Example:</i>
 Here is an example in which different parameter/argument pairs produce
 inconsistent template argument deductions:</p><pre class='codeblock'>
-template&lt;class T&gt; void f(T x, T y) { <span class='comment'>/* ... */</span> }
-struct A { <span class='comment'>/* ... */</span> };
-struct B : A { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; void f(T x, T y) { <span class='texttt'>/* ... */</span> }
+struct A { <span class='texttt'>/* ... */</span> };
+struct B : A { <span class='texttt'>/* ... */</span> };
 void g(A a, B b) {
   f(a,b);           <span class='comment'>// error: <span class='texttt'>T</span> could be <span class='texttt'>A</span> or <span class='texttt'>B</span>
 </span>  f(b,a);           <span class='comment'>// error: <span class='texttt'>T</span> could be <span class='texttt'>A</span> or <span class='texttt'>B</span>
@@ -1282,7 +1282,7 @@ is used in a subexpression in the function parameter list,
 the expression is a non-deduced context as specified above.
 [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
-template &lt;int i&gt; class A { <span class='comment'>/* ... */</span> };
+template &lt;int i&gt; class A { <span class='texttt'>/* ... */</span> };
 template &lt;int i&gt; void g(A&lt;i+1&gt;);
 template &lt;int i&gt; void f(A&lt;i&gt;, A&lt;i+1&gt;);
 void k() {
@@ -1318,7 +1318,7 @@ deduction fails.
 If <span class='texttt'>P</span> has a form that contains <span class='texttt'>[i]</span>, and if the type of
 <span class='texttt'>i</span> is not an integral type, deduction fails.<a class='footnotenum' href='#footnote-143'>143</a>
 [&nbsp;<i>Example:</i></p><pre class='codeblock'>
-template&lt;int i&gt; class A { <span class='comment'>/* ... */</span> };
+template&lt;int i&gt; class A { <span class='texttt'>/* ... */</span> };
 template&lt;short s&gt; void f(A&lt;s&gt;);
 void k1() {
   A&lt;1&gt; a;
@@ -1458,8 +1458,8 @@ for
 <span class='texttt'>c</span>.</p></div><div class='para' id='temp.over-3'><div class='marginalizedparent'><a class='marginalized' href='#temp.over-3'>3</a></div><p >Here is an example involving conversions on a function argument involved in
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 deduction:</p><pre class='codeblock'>
-template&lt;class T&gt; struct B { <span class='comment'>/* ... */</span> };
-template&lt;class T&gt; struct D : public B&lt;T&gt; { <span class='comment'>/* ... */</span> };
+template&lt;class T&gt; struct B { <span class='texttt'>/* ... */</span> };
+template&lt;class T&gt; struct D : public B&lt;T&gt; { <span class='texttt'>/* ... */</span> };
 template&lt;class T&gt; void f(B&lt;T&gt;&amp;);
 
 void g(B&lt;int&gt;&amp; bi, D&lt;int&gt;&amp; di) {
